軍事審判法 1967.12.1

--- a/行政-國防/軍事審判法.md
+++ b/行政-國防/軍事審判法.md
@@ -30,7 +30,7 @@
 
 * 16 軍事審判機關置軍事審判官若干人，依本編第三章第一節之規定，組織軍事法庭，行使審判職權。有二以上軍事審判官時，以一人為主任軍事審判官。
 
-* 17 軍事審判機關置軍事檢察官若干人，依本編第三章第四節之規定，行使檢察職權。有二以上軍事檢察官時，以一人為主任軍事檢察官。第九條第六款之初級軍事審判機關，其軍事檢察官，由其長官兼任之。
+* 17 軍事審判機關置軍事檢察官若干人，依本編第四章之規定，行使檢察職權。有二以上軍事檢察官時，以一人為主任軍事檢察官。第九條第六款之初級軍事審判機關，其軍事檢察官，由其長官兼任之。
 
 * 18 軍法官非依法律不得減俸、停職或免職；非得本人同意，不得調任軍法以外職務。
 
