強制執行法 1945.4.28

--- a/司法-民事/強制執行法.md
+++ b/司法-民事/強制執行法.md
@@ -252,9 +252,9 @@
 
 * 127 依執行名義，債務人應為一定行為而不為者，執行法院得以債務人之費用，命第三人代為履行。前項費用，由執行法院酌定數額，命債務人預行支付，必要時，並得命鑑定人鑑定其數額。
 
-* 128 依執行名義，債務人應為一定之行為，而其行為非他人所能代為履行者，債務人不為履行時，執行法院得定債務履行之期間及逾期不履行應賠償損害之數額，向債務人宣示或處或併處債務人以一千元以下之過怠金。前項規定，於夫妻同居之判決不適用之。執行名義，係命債務人交出子女或被誘人者，除適用第一項規定外，得用直接強制方法，將該子女或被誘人取交債權人。
+* 128 依執行名義，債務人應為一定之行為，而其行為非他人所能代為履行者，債務人不為履行時，執行法院得定債務履行之期間及逾期不履行應賠償損害之數額，向債務人宣示或處或併處債務人以一萬元以下之過怠金。前項規定，於夫妻同居之判決不適用之。執行名義，係命債務人交出子女或被誘人者，除適用第一項規定外，得用直接強制方法，將該子女或被誘人取交債權人。
 
-* 129 執行名義係命債務人容忍他人之行為或禁止債務人為一定之行為者，債務人不履行時，執行法院得拘提管收之，或處以一千元以下之過怠金。處過怠金時，並得因債權人聲請，命債務人提出相當之擔保。前項管收，準用第二十四條至第二十六條之規定。
+* 129 執行名義係命債務人容忍他人之行為或禁止債務人為一定之行為者，債務人不履行時，執行法院得拘提管收之，或處以一萬元以下之過怠金。處過怠金時，並得因債權人聲請，命債務人提出相當之擔保。前項管收，準用第二十四條至第二十六條之規定。
 
 * 130 為執行名義之判決，係命債務人為一定之意思表示而不表示者，視為自判決確定時，已為其意思表示。但意思表示有待於對待給付者，自法院就已為對待給付或提出相當擔保，給予證明書時，視為已為其意思表示。
 
