--- a/行政-經濟及能源/礦業法.md
+++ b/行政-經濟及能源/礦業法.md
@@ -2,215 +2,215 @@
 
 * 1 中華民國領域內之礦，均為國有，非依本法取得礦業權，不得探採。
 
-* 2 本法所稱之礦為左列各種。金礦。銀礦。銅礦。鐵礦。錫礦。鉛礦。銻礦。鎳礦。鈷礦。鋅礦。鋁礦。汞礦。鉍礦。鉬礦。鉑礦。銥礦。鉻礦。鈾礦。銧礦。鎢礦。錳礦。釩礦。鉀礦。硫磺礦。燐礦。砒礦。水晶。石棉。雲母。石膏。岩鹽。明礬。金剛石。天然鹼。重晶石。硝酸鹽。硼砂。筆鉛。綠松石。弗石。火粘土。滑石。長石。磁土。大理石：包括方解石。苦土石：包括白雲石。煤炭類。石油類。煤氣類。寶石類：包括玉。琢磨沙類。顏料石類。其他經國民政府指定者。
+* 2 本法所稱之礦為左列各礦：金礦。銀礦。銅礦。鐵礦。錫礦。鉛礦。銻礦。鎳礦。鈷礦。鋅礦。鋁礦。汞礦。鉍礦。鉬礦。鉑礦。銥礦。鉻礦。鈾礦。鐳礦。鎢礦。錳礦。釩礦。鉀礦。釷礦。鋯礦。鈦礦。鍶礦。硫磺礦（包括硫化鐵）。磷礦。砒礦。水晶。石棉。雲母。石膏。岩鹽。明礬。金剛石。天然鹼。重晶石。硝酸鈉。芒硝。硼砂。石墨。綠柱石。螢石。火粘土。滑石。長石。瓷土。大理石。（包括方解石）苦土石。（包括白雲石）煤炭。石油（包括油頁岩）。天然氣。寶石（包括玉）。琢磨沙。顏料石。其他經行政院指定者。
 
-* 3 探礦、採礦及其附屬事業為礦業。
+* 3 探礦、採礦及其附屬選礦、煉礦事業為礦業。
 
-* 4 探礦權、採礦權，均為礦業權。
+* 4 探礦權、採礦權均為礦業權。
 
-* 5 第二條所列各礦除第九條所定國營及第十條所定國家保留區外，中華民國人得依本法取得礦業權。中央政府及地方政府設定前項礦業權，均應依本法之規定。礦業權設定後，得准許外國人入股，合組股份有限公司，經營礦業。但應由經濟部核請行政院核准，並受左列各款之限制。一、公司股份總額過半數應為中華民國人所有。二、公司董事過半數應為中華民國人。三、公司董事長及總經理等職應以中華民國人充任。前項中外合辦礦業之規定，民營礦業或中央及地方政府所營礦業，均適用之。
+* 5 第二條所列各礦，除第八條所定國營及第九條所定國家保留區外，中華民國人得依本法取得礦業權。中央政府及地方政府設定前項礦業權，均應依本法之規定。礦業權設定後，得准許外國人入股合組股份有限公司經營礦業。但應由經濟部核轉行政院核准，並受左列各款之限制：一、公司股份總額過半數，應為中華民國人所有。二、公司董事過半數，應為中華民國人。三、公司董事長，應以中華民國人充任。前項合辦礦業之規定，民營礦業或中央及地方政府所營礦業均適用之。
 
-* 6 土地區域，依本法取得礦業權之登記者，為礦區。礦區之境界，以直線定之，由地面境界線之直下為限。二以上之礦區相鄰接時，其鄰接之界限，至少須有二十公尺之距離。
+* 6 依本法取得礦業權登記之土地為礦區。礦區之境界，以由地面境界線之直下為限。礦區與礦區之鄰接界限，至少須有二十公尺之距離。
 
-* 7 礦區之地面水平面積，煤礦以十五公頃至五百公頃為限，其他各礦以二公頃至二百五十公頃為限，砂礦在河底不便計算面積者，沿河身計其長度以一公里至五公里為限。前項礦區面積之最大限度，如因特別情形，經農礦部派員或令省主管官署派員查勘，認為必要時，得增加之。
+* 7 礦區之地面水平面積，煤礦、石油礦以五公頃至五百公頃為限，其他各礦以二公頃至二百五十公頃為限，砂礦在河底不便計算面積者，沿河身計其長度，以一公里至五公里為限。前項礦區面積之最大限度，如因特別情形，經經濟部派員或經省（直轄市）主管機關派員查勘認為必要時得增加之。但不得超過最大限度一倍。
 
-* 8 採礦之區域其面積不及前條所定之最小限度者，為小礦業。
+* 8 石油礦、天然氣礦、鈾礦、釷礦及適於煉冶金焦之豐富煤礦，應歸國營，如國家不自行探採時，得由中華民國人承租之。前項石油礦、鈾礦、釷礦之礦產，政府有先買權，各礦之礦產輸出國外之數量及期限，於必要時，中央主管機關得加以限制，適合煉冶金焦之豐富煤礦，其標準由經濟部定之。
 
-* 9 鐵礦，石油礦銅礦及適於煉冶金焦或煉油之豐富煤礦，應歸國營，由國家自行探採，如無自行探採之必要時，得出租採探。但承租人以中華民國人為限。媒氣礦含有氰質者，政府對於煤氣得保留提取氰質之權。鐵礦，石油礦，銅礦等礦產，政府有先買權。前項礦產輸出國外之數量及期限，其契約經中央主管機關之核准，方為有效，遇必要時，仍得加限制。第一項適合煤治金焦或煉油之豐富煤礦，其標準由實業部定之。
+* 9 左列各礦，經濟部認為有保存或調節供求之必要時，得指定區域作為國家保留區，禁止探採：一、鐵礦。二、銅礦。三、鎢礦。四、銻礦。五、鐳礦。六、鉬礦。七、汞礦。八、鋯礦。九、其他由經濟部呈准行政院指定者。前項保留區，經濟部認為無保留必要時，如須國營得劃為國營礦區，設定國營礦業權，適用前條之規定，其未經劃為國營礦區之各礦，得核准人民申請探採。
 
-* 10 前條各礦及左列各礦實業部認為有保存或調節供求之必要時，得指定區域作為國家保留區禁止探取。一、鎢礦。二、錳礦。三、鋁礦。四、銻礦。五、鈾礦。六、銧礦。七、鉀礦。八、燐礦。九、鉬礦。十、其他由實業部呈准行政院指定者。
+* 10 凡最先發現第八條及第九條所列各礦者，應即申報經濟部，經查明確係該申報人最先發現，如認為必須國家自行開採或作為國家保留區時，應給與申報人覓礦實際費用五倍以上之獎勵金。
 
-* 11 凡最先發現第九條及第十條所列各礦者，應即呈報農礦部，經農礦部查明確係該呈報人最先發現，並認為必須國家自行開採或作為國家保留區時，應給予呈報人覓礦實際費用五倍以上之獎勵金。
+* 11 礦業權視為物權，除本法有特別規定外，準用關於不動產諸法律之規定。
 
-* 12 礦業權視為物權，除本法有特別規定外，準用關於不動產諸法律之規定。
+* 12 礦業權不得分割。但有合辦關係合於礦利原則者，經經濟部核准得分割之，其面積不得小於第七條所規定最小限度。
 
-* 13 礦業權不得分割。
+* 13 國營礦業權以外之礦業權，不得為租賃標的。但採礦權經核准租賃者不在此限，其核准辦法由行政院定之。
 
-* 14 礦業權除繼承、讓與、抵押、滯納處分及強制執行外，不得為權利之目的。前項礦業權之抵押，以採礦權為限。
+* 14 礦業權除繼承、讓與、抵押、滯納處分及強制執行外，不得為權利之標的。前項礦業權之抵押，以採礦權為限。
 
-* 15 探礦權以二年為限。
+* 15 探礦權以二年為限，期滿後得申請經濟部核准展限一次。但不得超過二年。
 
-* 16 採礦權不得過二十年，限滿後，得呈經農礦部核准展限。但展限不得過二十年。
+* 16 採礦權以二十年為限。但期滿後得申請經濟部核准展期二十年。
 
-* 17 左列各事項，應呈經農礦部核准，並應於核准後，呈請省主管官署登記。一、礦業權之設定、變更、移轉。二、探礦權作抵押時，其抵押權之設定、變更、移轉。農礦部於前項第一款事項之核准，應填發礦業執照或批注執照。
+* 17 左列各事項應申請省（直轄市）主管機關轉經濟部核准，並應於核准後，由原核轉機關登記：一、礦業權之設定、變更、移轉。二、採礦權作抵押時，其抵押權之設定、變更、移轉。經濟部於前項第一款事項之核准，應填發礦業執照或批註執照。
 
-* 18 左列各事項，應經省主管官署登記。一、礦業權之消滅及處分之限制。二、採礦權作抵押時，其抵押權之消滅及處分之限制。
+* 18 左列各事項應經省（直轄市）主管機關登記，並轉報經濟部：一、礦業權之消滅及處分之限制。二、採礦權作抵押時，其抵押權之消滅及處分之限制。
 
-* 19 呈請設定礦業權者，應具呈請書附礦區圖，呈由省主管官署轉農礦部核准，如係呈請採礦時，並應添具礦床說明書。前項呈請有關之事項，省主管官署或農礦部認為必要時，得派員或令該管地方官署查勘。
+* 19 申請設定礦業權者應具申請書附礦區圖報由省（直轄市）主管機關轉經濟部核准，如係申請採礦時並應填具礦&#29248;說明書。二人以上申請設定礦業權應具合辦契約，載明各合辦人資本額及權利義務關係，如係公司組織者，並應擬具公司章程。前兩項申請有關之事項，經濟部認為必要時，得派員複勘。
 
 * 20 礦區之位置界限及面積，以礦區圖基點及測點間各距離角度為準，如按兩基點各別測定而結果不一致時，應以按第一基點測定者為準。
 
-* 21 礦業呈請人所具呈請書、礦區圖、礦床說明書有不完備時，省主管官署或農礦部，得限期令其更正或補呈，如不依限更正或補呈，應將呈請案撤銷。
+* 21 礦業申請人所具申請書、礦區圖、礦床說明書，有不完備時，省（直轄市）主管機關或經濟部得限期令其補正，如不依限補正，應將申請案撤銷。礦業申請人應繳之費稅，省（直轄市）主管機關得限期令其繳納，如不依限繳納，應將申請案撤銷。經濟部及省（直轄市）主管機關對第一項申請案，查勘核定時間，不得超過六個月。
 
-* 22 左列各地域內，不得呈請設定礦業權。一、於砲台、要塞、軍港及一切軍用局廠有關係曾經圈禁之地點以內，未經該管官署准許者。二、距商埠市場地界一公里以內，未經該管官署准許者。三、距國有公有建築物、國葬地、鐵路、公用道路、緊要水利及不能移動之著名古蹟等地界十五公丈以內，未經該管官署或所有人及占有人准許者。
+* 22 左列各地域內，不得申請設定礦業權：一、要塞、堡壘、軍港、警衛地帶，及與軍用局廠場所有關曾經圈禁之地點以內，未經該管機關准許者。二、距商埠市場地界一公里以內，未經該管機關准許者。三、距國有公有建築物、國葬地、鐵路、公用道路、緊要水利、保安林地、重要廠址，及不能移動之著名古蹟等地界一百五十公尺以內，未經該管機關或土地所有人及土地占有人准許者。
 
-* 23 礦業呈請人得呈請增減其礦業呈請地。
+* 23 礦業申請人得因礦利關係，申請增減其所申請礦區之面積。
 
-* 24 農礦部或省主管官署對於探礦呈請地，確認為適於採礦者，得限期令原呈請人呈請採礦，如不依限呈請，得撒銷其呈請案，另許他人呈請採礦。農礦部或省主管官署認採礦呈請地，仍須探礦者，準用前項之規定。
+* 24 經濟部或省（直轄市）主管機關，對於探礦申請地確認為適於採礦者，得限期令原申請探礦人申請採礦，如不依限申請，得撤銷其探礦申請案。
 
-* 25 二以上之礦業呈請地相重複者，如礦質為同種，其重複之部分應以呈請省主管官署在先者，有取得礦業權之優先權。前項呈請，如呈請書到達之年月日相同，省主管官署應限期令各該呈請人協商後，再行呈請，各該呈請人如不依限協商呈請時，省主管官署應以抽籤之法，決定優先權者。
+* 25 同一礦地有二宗以上申請案時，如礦質為同種，其重複部分，應以申請省（直轄市）主管機關在先者有取得礦業權之優先權。前項申請如同時到達，應令各該申請人限期協商，再行申請，如不依限辦理，以抽籤方法決定之。前項申請人中如有該礦地之土地所有人，而其所有土地佔申請礦區面積二分之一以上者，該申請人有取得礦業權之優先權。
 
-* 26 探礦呈請地與採礦呈請地相重複時，如係同時呈請，且礦質為同種，其重複之部分，採礦呈請人有取得礦業權之優先權。
+* 26 探礦申請地與採礦申請地相重複時，如係同時申請，且礦質為同種，其重複之部分，採礦申請人有取得礦業權之優先權。
 
-* 27 探礦呈請人對於同種之礦質，更為採礦之呈請，如呈請地與他人採礦呈請地有重複時，其探礦呈請書到達之日即視為採礦呈請書到達之日。
+* 27 探礦申請人對於同種之礦質，更為採礦之申請，如申請地與他人採礦申請地有重複時，其探礦申請書到達之日，即視為採礦申請書到達之日。
 
-* 28 探礦呈請地與他人礦區相重複，如礦質為同種，其重複之部分不得核准。
+* 28 探礦申請地與他人礦區相重複，如礦質為同種，其重複之部分不得核准。
 
-* 29 採礦呈請地與他人礦區相重複，如礦質為同種，其重複之部分不得核准，但有第三十八條之情事者，不在此限。
+* 29 採礦申請地與他人礦區相重複，如礦質為同種，其重複之部分不得核准。但有第四十條第一項之情事者，不在此限。
 
-* 30 探礦呈請地，如有他人更為採礦之呈請，而礦質為同種，他人呈請採礦之重複部分，準用第二十四條第一項之規定。
+* 30 探礦申請地如有他人更為採礦之申請而礦質為同種，他人申請採礦之重複部分，準用第二十四條之規定。
 
-* 31 礦業呈請地與他人礦業呈請地或與他人礦區相重複，如礦質為異種，省主管官署應即通知呈請在先者或礦業權者。呈請在先者或礦業權者自接到前項通知日起九十日內，有取得礦業權之優先權。前項之規定於第三十八條之情事，已經礦業權者承諾時，不適用之。
+* 31 礦業申請地與他人礦業申請地或礦區相重複，如礦質為異種，省（直轄市）主管機關應即通知申請在先者，或礦業權者，限於九十日內優先申請設定礦業權，如不依限申請，即取銷其優先權。前項規定於第四十條第一項之情事，已經礦業權者承諾時不適用之。
 
-* 32 探礦權者於探礦期間屆滿後三十日內，對於該區域內同種礦質，有取得礦業權之優先權。
+* 32 探礦權者於探礦期間屆滿後三十日內，對於原申請所探之礦質，有取得礦業權之優先權。
 
-* 33 礦業呈請地之位置形狀與礦床之位置形狀不合，致損礦利時，農礦部或省主管官署得限期令呈請人更正，如不依限呈請更正。應撒銷其呈請案。前項之情事，呈請人亦得自請更正。
+* 33 經濟部或省（直轄市）主管機關對礦業申請地之位置形狀與礦&#29248;之位置形狀，認為不符，有損礦利時，得限期令申請人更正，如不依限申請更正，應撤銷其申請案。前項情事，申請人亦得自請更正。
 
-* 34 農礦部或省主管官署認礦業呈請地為妨害公益或無經營之價值時，得不予核准。
+* 34 經濟部或省（直轄市）主管機關認為礦業申請地有妨害公益或無經營之價值時，得不予核准。經濟部為探勘礦產調整礦區或調節產銷時，得指定某區域內之礦停止接受申請。
 
-* 35 礦業呈請地之一部與他人礦區相重複，致錯誤核准時，農礦部或省主管官署得限期令原呈請人訂正。
+* 35 經核准礦業申請地之一部分與他人已設定礦業權之礦區相重複時，經濟部或省（直轄市）主管機關得限期令申請在後者訂正。
 
-* 36 礦業權者對於核准之礦區呈請增減、訂正、合併、分割時，應具呈請書，並附新舊關係礦區圖及理由書，呈經省主管官署轉農礦部核准。前項之呈請如有查勘之必要或圖件不完備時，適用第十九條第二項及第二十一條之規定。
+* 36 經政府探勘認為有價值而未設定礦業權之礦區，或依第四十三條撤銷礦業權之礦區，應由主管機關訂定辦法，定期公告准許自由申請。前項同一礦區同時有二人以上申請，如條件相同時，以抽籤方式決定之。第一項礦區之申請被撤銷，礦業權人對其原領礦區不得為之。
 
-* 37 礦區之位置形狀與礦床之位置形狀不合，致損礦利時，農礦部或省主管官署得限期令其訂正。
+* 37 為避免礦業權申請之重複，人民得附具圖說，申請主管機關查詢礦業權申請登錄簿，主管機關應於五日內予以答覆。
 
-* 38 礦業權者因礦床之位置形狀必須掘進鄰接礦區時，應與鄰接礦業權者協商，取其承諾字據，並附礦床圖說，呈由省主管官署轉農礦部將礦區增改。因前項情事與鄰接礦業權者協商時，鄰接礦業權者如無正當理由，不得拒絕。
+* 38 礦業權者對於核准之礦區申請增減、訂正、合併、分割時，應具申請書，並附新舊關係礦區圖及理由書，報經省（直轄市）主管機關轉經濟部核准。前項申請案之處理，得適用第十九條第三項及第二十一條第一項、第二項之規定。
 
-* 39 礦業權者在礦區之外，因洩水通氣及運輸開掘隧峒發現礦質時，或在礦區內之同一礦床發現異種礦質時，應即呈報省主管官署轉農礦部核辦。前項礦區外發現之礦質，省主管官署認為有開採之價值，而不能單獨開採者，得限期令其增區。
+* 39 經核准之礦區位置、形狀與礦&#29248;之位置、形狀不符，有損礦利時，準用第三十三條之規定。
 
-* 40 礦業權移轉時，其移轉前，礦業權者關於該礦業權之權利義務，亦隨之移轉。
+* 40 礦業權者因礦&#29248;之位置形狀必須掘進鄰接礦區時，應與鄰接礦業權者協商取得其承諾字據，並附礦&#29248;圖說，報由省（直轄市）主管機關轉經濟部將礦區調整。礦業權者因礦&#29248;之位置形狀，必須開鑿井隧，通過鄰接礦區時，應與鄰接礦業權者協商取得其承諾字據，並附工程圖說，報由省（直轄市）主管機關轉經濟部核備。前兩項情事，如不能達成協議時，得由經濟部裁定。
 
-* 41 礦業權有左列情事之一時，其礦業權應即撤銷。一、登記後無不可抗力之故障二年內不開工，或中途停工一年以上者。二、將礦業權移轉或抵押於外國人者。三、礦業有害公益無法補救者。四、無正當理由不納礦稅兩期以上者。五、無正當理由不依第三十五條及第三十七條之規定訂正礦區者。六、以詐欺取得礦業權經法院依第一百零八條之規定處罰者。
+* 41 礦業權者在礦區之外，因洩水通氣及運輸開掘隧峒，發現礦質時，或在礦區內之同一礦床發現異種礦質時，應即申報省（直轄市）主管機關轉經濟部核辦。前項礦區外發現之礦質，省（直轄市）主管機關認為有開採之價值而不能單獨開採者，得限期令其擴增礦區。
 
-* 42 礦業權之處分受限制時，不得廢業。
+* 42 礦業權移轉時，其移轉前礦業權者關於該礦業權之權利義務，亦隨同移轉。
 
-* 43 採礦權被撒銷或自行廢業後，原礦業權者得儘一年內，自行處分其他礦業財產。但因特別情形，並於礦利無妨害時，得呈請農礦部核准展限一年。
+* 43 礦業權者有左列情事之一時，其礦業權應即撤銷：一、登記後無不可抗力之故障，二年內不開工或中途停工一年以上者。二、將礦業權移轉或抵押於外國人者。三、礦業之經營有害公益無法補救，或違反安全法令，不遵令改善者。四、不納礦區稅四期以上者。五、以詐欺取得礦業權經法院依第九十六條之規定判決確定者。
 
-* 44 採礦權者以採礦權為抵押時，應具呈請書，並附抵押契約，呈經省主管官署轉呈農礦部核准。
+* 44 採礦權被撤銷或自行廢業後，原礦業權者，得儘一年內自行處分其財產設備。但因特別情形並於礦利無妨害時，得申請經濟部核准展限一年。
 
-* 45 抵押權設定後，採礦權者如欲將礦區分割、合併，減少或增加時，須經抵押權者之承諾。
+* 45 採礦權者以採礦權為抵押時，應具申請書，並附抵押契約，報經省（直轄市）主管機關轉經濟部核准。
 
-* 46 採礦權滿期之銷滅，不受抵押權之拘束。
+* 46 抵押權設定後，採礦權者如欲將礦區分割、合併、減少或增加時，須經抵押權者之承諾。
 
-* 47 省主管官署關於設定抵押權之採礦權，為撤銷或廢棄之登記時，應即通知抵押權者。抵押權者受前項之通知後六十日內，得請求拍賣其礦業權。但因第四十一條第三款之情事而撤銷者，不得請求拍賣。採礦權，於前項規定期間內及至拍賣程序完結之日止，於拍賣目的之範圍內，仍視為存續。前項礦業權拍定人所承受之採礦權，視為自原採礦權銷滅登記之日起承受。
+* 47 採礦權因滿期消滅時，不受抵押權之拘束。
 
-* 48 國營礦業由實業部管理，或由實業部呈准行政院委託其他官署辦理。
+* 48 省（直轄市）主管機關關於設定抵押權之採礦權為撤銷或廢業登記時，應即通知抵押權者。抵押權者受前項之通知後六十日內得請求拍賣其礦業權。但因第四十三條第三款有害公益之情事而撤銷者，不得請求拍賣。採礦權於前項規定期內及至拍賣程序完成之日止，仍視為存續。前項礦業權拍定人所承受之採礦權，應自原採礦權消滅登記之日起承受之。
 
-* 49 凡國營之礦應由農礦部劃定礦區，設定國營礦業權，呈請行政院備案，並令交該礦區所在地主管官署登記。
+* 49 國營礦業由經濟部管理或由經濟部呈准行政院委託其他機關辦理。
 
-* 50 國營之礦國家自行探採時，得用公司組織，准許私人入股，但外國人入股時，仍適用第五條第三項之規定。
+* 50 國營之礦，應由經濟部劃定礦區，設定國營礦業權，呈請行政院備案，並令交該礦區所在地主管機關登記。
 
-* 51 國營礦業權出租時，其承租條件由農礦部與承租人以契約定之。前項租約應載明承租期限及每年租金，並應斟酌該礦實地情形，定明每年最低產額及每年最低投資額。
+* 51 國營之礦國家自行探採時，得用公司組織准許私人入股。但外國人入股時，仍適用第五條第三項之規定。
 
-* 52 國營礦業權在未經核准私人承租前，於同等條件之下，該管地方政府有承租之優先權。如呈請者同係私人，以呈請農礦部在先者，有承租之優先權。
+* 52 國營礦業權出租時，其承租條件由經濟部與承租人以契約定之。前項租約應載明承租期限及每年租金，並應斟酌該礦實地情形，定明每年最低產額及每年最低投資額。
 
-* 53 承租人不得將所租國營礦業權轉租、抵押、典質或讓與。
+* 53 國營礦業權在未經核准私人承租前，於同等條件之下，該管地方政府有承租之優先權，如申請者同係私人，以申請經濟部在先者，有承租之優先權。
 
-* 54 國營礦業權之租期以二十年為限，期滿如非國家收回自營者，承租人有繼續租賃之優先權。承租人依左列之規定，按年繳納租金。一、淨盈餘在實收資本百分之十以下者免租。二、淨盈餘超過實收資本百分之十者，而在百分之三十五以內，應就其超過部分，繳納百分之五十之租金。三、淨盈餘超過實收資本百分之三十五者，就其未超過百分之三十五之部分，依前款規定繳納租金外，並應就其已超過百分之三十五部分，繳納百分之七十五之租金。
+* 54 承租人不得將所租國營礦業權轉租、抵押、典質或讓與。
 
-* 55 租期屆滿，國家收回自辦時，對於原承租人礦業上適用之財產或設備，應公平估價收買之，如租期屆滿，國家無收回之必要時，應准原承租人繼續立約承租。
+* 55 國營礦業權之租期以二十年為限，期滿後國家如不收回自營，承租人有繼續租賃之優先權。承租人每年繳納之租金，以不超過淨盈餘百分之五十為限。前項租金得以權利金繳付之，其繳納方式及其金額由行政院核定之。
 
-* 56 承租人有左列各款情事之一時，其租約應即撒銷。一、違背第五十三條之規定者。二、逾期不繳租金者。三、承租後三年內，向未從事礦廠設備，並無正當理由者。四、承租後二年內，尚未開工或中途停工至一年以上，並無正當理由者。
+* 56 租期屆滿國家收回自營時，對於原承租人礦業上適用之財產或設備，應按現時市價減去已使用年限之折舊價值收購之。
 
-* 57 因前條各款情事，撤銷租約時，原承租人所有礦業上附屬財產及一切設備，除屬於保安範圍或由國家收買者外，應於半年內，遷去之。但因特別情形，呈經農礦部許可者，不在此限。
+* 57 承租人有左列各款情事之一時，其租約應即撤銷：一、違反第五十四條之規定者。二、逾期不繳租金或權利金者。三、承租後二年內尚未開工，或中途停工至一年以上者。四、承租後三年內尚未按照計劃完成礦場設備者。
 
-* 58 第十四條、第十五條、第十六條、第四十一條及第四十三條之規定，於國營礦業不適用之。
+* 58 因前條各款情事撤銷租約時，原承租人所有礦業上附屬財產及一切設備之處理，適用第五十六條之規定。
 
-* 59 小礦業權於合於左列各款情事之一時，得設定之。一、交通不便地方，經該省主管官署呈明農礦部核准為小礦業區域者。二、礦量甚微，無大規模經營之價值者。三、礦業未發達之區域，其礦產物為該地方所需要者。前項第一款之小礦業區域，經該省主管官署呈請或農礦部認為必要時，得撤銷之。
+* 59 礦業實際使用地面，稱為礦業用地。
 
-* 60 小礦業權以採礦為限。
+* 60 礦業權者因左列各款之一有必要時得依法使用他人土地：一、開鑿井隧。二、堆積礦產物、土石爆發藥、薪、炭、礦渣、灰燼或一切礦用材料。三、建築礦業廠庫或其需要房屋。四、設置大小鐵路、運路、運河、水管、氣管、溝渠、地井、索道或電線等。五、設施其他礦業上必要之各種工事或工作物。
 
-* 61 小礦業之呈請地，如有他人更為礦業權設定之呈請時，經查明後如合於第五十九條第一項各款之一者，該小礦業呈請案仍然有效。前項小礦業呈請案核准後，其小礦業權於期滿時不得再展。
+* 61 土地使用權之取得依左列之規定，本條未規定者依其他有關法律之規定：一、購用：由礦業權者給價取得土地所有權。二、租用：由礦業權者分期或一次繳納租金。土地所有人或土地占有人，對於礦業上應使用之土地非有正當理由不得拒絕。
 
-* 62 小礦業權以十年為限，期清後，如與礦利無妨害時，得呈准展限五年。但遇第五十九條第一項第一款或第三款所規定之情事銷滅時，不得展限。小礦業之存在，不得妨礙礦業權之呈請。但呈請礦區如與小礦區重複時，應聽由小礦業權者在核准期內，繼續開開。但期滿後，不得再展。
+* 62 礦業權者購用土地之地價，應以土地地目等則市價為標準。礦業權者租用土地之年租金，應比照前項標準按百分之八以下訂定之。
 
-* 63 呈請設立小礦業權者，應具呈請書並附礦區圖，呈請省主管官署核准登記，發給小礦業執照。但須同時呈報農礦部備案。前項之小礦業執照，由農礦部預先頒發省主管官署。
+* 63 前條之地價或租金，經礦業權者及土地所有人之同意，得投作該礦業之股金列為股東。
 
-* 64 農礦部對於前條之核准，認為違背第五十九條之規定時，得撤銷之。
+* 64 依第六十條之規定使用他人土地礦業權者，應備具施工計劃，附同圖說，申請省（直轄市）主管機關審查，就其必須使用之面積予以核定，並通知土地所有人及關係人。省（直轄市）主管機關為前項核定時，得先徵詢地政主管機關之意見。第一項之規定如土地為公有時，省（直轄市）主管機關於核定前，應徵求該土地主管機構之同意。
 
-* 65 小礦業權者於限期內或限期屆滿後六個月內，依第三十六條之規定，呈請合併各小礦區時，有取得礦業權之優先權。
+* 65 土地之使用經核定後，礦業權者為取得關於該土地之權利，應與土地所有人及關係人成立協議，如不能達成協議時，雙方均得向省（直轄市）主管機關申請裁定。
 
-* 66 第九條、第十五條、第十六條、第九十五條、第九十八條、常九十九條及第一百零一條之規定，於小礦業不適用之。
+* 66 租用之土地，於使用完畢後，礦業權者應回復其土地之原狀交還土地所有人，如因不能回復原狀致有損失時，應按其損失程度另給土地所有人以相當之補償。
 
-* 67 礦業實在使用地面為用地。
+* 67 土地所有人及關係人，對於地價或租金，如非一次付清或為履行前條之規定，得要求礦業權者提出擔保。
 
-* 68 覓礦人，礦業呈請人或礦業權者，於必要時，得於他人地面為測量或查勘等事。但須經所在地地方官署許可。得前項之許可實行測量或查勘時，應先通知土地占有人。
+* 68 因礦業工作致礦區以外之土地有重大損失時，礦業權者應給與土地所有人及關係人以相當之補償。
 
-* 69 因測量查勘等事，必須除去障礙物者，應商得土地所有人或土地占有人承諾。不能得前項承諾時，應呈請所在地地方官署許可除去障礙物，並通知土地所有人或土地占有人。
+* 69 礦業權移轉時，使用地面之權利義務，均應隨同移轉。
 
-* 70 礦業權者為防禦礦業上緊急之危險，得入他人之地面或使用之。但應即行呈報所在地地方官署，並通知土地所有人或土地占有人。
+* 70 覓礦人礦業申請人或礦業權者，於必要時，得於他人地面為測量或查勘等事。但應先期通知所在地地方機關及土地所有人或土地占有人。
 
-* 71 因前三條之情事，土地所有人或土地占有人如受損失，覓礦人礦業呈請人或礦業權者應給予相當之償金。
+* 71 因測量查勘等事必須除去障礙物者，應商得土地所有人或土地占有人同意。前項障礙物不包括房屋、墳墓在內。
 
-* 72 礦業權者因礦業需要使用他人土地在二十四小時以內，並不妨害地面及其附屬物時，得於事先一日將使用目的通知土地所有人或土地占有人、土地所有人或土地占有人非有正當理由不得拒絕。
+* 72 礦業權者為防禦礦業上緊急危險得暫時使用他人之地面，但應即行申報所在地地方機關並通知土地所有人或土地占有人。前項地面暫時使用完畢後礦業權者應負責回復原狀。
 
-* 73 礦業權者因左列各款之一，有必要時得使用他人土地。一、開鑿井隧。二、堆積礦產物、土石、爆發藥、薪炭、礦渣、灰燼或一切礦用材料。三、建築礦業廠庫或其需要房屋。四、設置大小鐵路、運路、運河、水管、汽管、溝渠、地井、索道或電線等。五、設施其他礦業上必要之各種工事或工作物。
+* 73 因前三條之情事，土地所有人或土地占有人，如受損失，覓礦人、礦業申請人或礦業權者，應按實際價值給與補償。
 
-* 74 依前條之規定使用他人土地，應經省主管官署許可，並應將施工計畫繪具圖說，呈由省主管官署審定。省主管官署為前項之許可後，應即公告，並通知土地所有人及關係人。經前項之公告或通知後，礦業權者為取得關於該土地之權利，應與土地所有人及關係人商定之。第一項之規定如土地為公有時，省主管官署於許可前，應徵求該土地主管人之同意。第二十二條所列各地域及地方重要公共事業所需之地域，經省主管官署查明，認為不應為礦業使用地者，不得許可。
+* 74 礦業權者已取得使用權之土地，其無須使用部分，如鄰接礦業權者，在礦業上必須使用時，經主管機關核定後，得依第六十二條之規定協議使用。
 
-* 75 礦業權者於其礦區以內之土地，除因礦業必須使用者外，如無正當理由，不得禁阻鄰接礦業權者礦業必須之使用。
+* 75 關於用地之規定，對於經過設施水源之使用準用之。
 
-* 76 礦業權移轉時，使用地面之權利義務，均應隨時移轉，若喪失礦業權，亦同時喪失其使用地面之權利。
+* 76 本章關於礦業權者之規定，於國營礦業權之承租人準用之。
 
-* 77 因使用他人之土地礦業權者，應給予土地所有人及關係人以相當之償金。因使用土地其定著物必須遷移者，礦業權者應給予必要之遷移費，但以確有原主者為限。
+* 77 礦稅分左列二種，由礦業權者分別繳納：一、礦區稅。二、礦產稅。國營礦業權出租時，前項礦稅由承租人繳納之。
 
-* 78 土地須使用三年以上或因使用而變其性質時，礦業權者得與土地所有人協商，或由土地所有人請求，給予一次之相當價金。但礦業廢止或使用完竣時，仍應將土地交還原土地所有人。
+* 78 礦區稅為地面租稅以外之稅，其稅率如左：一、探礦區每公畝按年納國幣一分，砂礦在河底者，每河道長十公尺，按年納國幣一分。二、採礦區每公畝或河道每長十公尺，按年納國幣三分。採礦權者因礦工罷工或其他不可抗力致不能工作繼續在二個月以上時，得請求免納不能工作期間之礦區稅。
 
-* 79 因礦業工作致用地或礦區以外土地之價值，低減或有他項之損失時，礦業權者應給予土地所有人及關係人以相當之償金。但其土地如失從前之效用時，準用前條之規定。
+* 79 礦產稅按照礦產物價格納百分之二至百分之十。前項之礦產物價格以出產地附近市場之平均市價為標準，由經濟部、財政部按照省（直轄市）主管機關報告會同核定之。
 
-* 80 於使用之土地，須增築或修改其道路、溝渠、牆棚及其他工作物等，除已依第七十八條之規定，給予一次償金者外，礦業權者應給予士地所有人及關係人以相當之償金。
+* 80 礦區稅每年分二期，於一月、七月繳納，礦產稅依照實際產額約計市價按月繳納。前項按月繳納之礦產稅額，於核定平均市價後，逐年年終清結。
 
-* 81 數礦業權者共同損害地面及附屬物時，應連帶負損害賠償責任，不能證明孰為加損害者亦同。
+* 81 經濟部或省（直轄市）主管機關對於礦業工程認為有危險或妨害公益時，應令礦業權者立即採取改善措施，或暫行停止工作，如抗不遵辦，得適用第四十三條第三款之規定。經濟部或省（直轄市）主管機關對於礦業權者因工程或作業上之疏忽，致地方受有損害時，應責令為相當之賠償，如雙方不能協議應由省（直轄市）主管機關臨時組織地方礦害賠償審議委員會議決調處之。
 
-* 82 經第七十四條第二項公告或通知後，土地所有人或關係人欲變更其土地之形質或新築改築大修繕或增設其他工事時，應經省主管官署許可，未經許可者，不得請求損害賠償。前項工事如與礦業之性質絕對不相容，或無損於建築者而大有損於礦利時，礦業權者得呈請省主管官署查明禁止施工。
+* 82 省（直轄市）主管機關對於礦場之安全設施，應分區分期派員檢查，每年至少二次。其有不合標準者，並應予以指導限期令其充實或改善，於到期後派員複查。礦業權者應按月從礦產品售價內至少提出百分之二專款存儲作為充實改善礦場安全設施之用，並應另立收支帳冊以備稽查。
 
-* 83 土地所有人提出損害賠償之要求，或明知其地面已受損害後，故意興工建築其建築物，如有損害不得要求賠償。土地所有人於地面有非常顯著之危險，而急於注意興工建築者，亦適用前項之規定。
+* 83 礦業權消滅後一年內經濟部或省（直轄市）主管機關認為必要時，得令原礦業權者為預防危險之設備。
 
-* 84 經第七十四條第二項公告或通知後，其礦業如有廢止或變更，礦業權者對於土地所有人或關係人因此所受之損失，應給以相當之償金。
+* 84 採礦權者應備置坑內實測圖及礦業簿於採礦場所，並繕具副本申報省（直轄市）主管機關。
 
-* 85 土地所有人及關係人對於償金，得要求礦業權者提出相當之擔保。
+* 85 礦業權者每年一月應將上年度之礦業情形，及本年度施工計劃，造具明細表冊，申報經濟部及省（直轄市）主管機關。
 
-* 86 礦業權者如不交償金或不具擔保，土地所有人及關係人得拒絕其使用。
+* 86 探礦時所得礦質，須報省（直轄市）主管機關聽候處理，非經准許不得出售。
 
-* 87 土地之權利在使用期間，應歸礦業權者。其他已設定之權利，亦須停止。但不妨害使用者，不在此限。
+* 87 礦業權者所用主要技術人員，應就技師登記合格者儘先任用之。前項技術人員有不稱職時，經濟部或省（直轄市）主管機關得令其改任。
 
-* 88 土地之使用完竣，礦業權者應回復其土地之原狀，交還原土地所有人。如因不能回復原狀致有損失時，除依第七十八條之規定，給予一次償金者外，應給予土地所有人以相當之償金。
+* 88 礦業權者遇有事故有查勘鄰接礦區之必要時，得申請經濟部或省（直轄市）主管機關派員會同各該礦業權者實施查勘。前項規定於其他利害關係人適用之。凡申請派員赴礦業申請地或礦區查勘時，其費用應歸申請人負擔。
 
-* 89 關於用地之規定，於水之使用準用之。
+* 89 凡專科以上學校或職業學校採礦、冶金、地質等科學生願在礦場實習者，經經濟部或省（直轄市）主管機關令知後，各礦業權者不得無故拒絕。實習規則由經濟部定之。
 
-* 90 本章關於礦業權者之規定，於國營礦業權之承租人準用之。
+* 90 省（直轄市）主管機關每年應將該管區域內礦區面積、礦質、產額、礦稅收入，分別查明編成詳細統計，於四月以前彙呈經濟部。
 
-* 91 礦稅分左列二種，由礦業權者分別繳納。一、礦區稅。二、礦產稅。國營礦業權出租時，前項礦稅由承租人繳納之。
+* 91 經濟部對於應行增產之礦，得輔導同一區域內同類之礦業聯合經營。
 
-* 92 礦區稅為地面租稅以外之稅，其稅率如左。一、探礦區每公畝按年納國幣一分，砂礦在河底者，每河道長十公尺，按年納國幣一分。二、採礦區每公畝或河道每長十公尺，自開辦起五年內，按年納國幣二分，自第六年起按年納國幣五分。
+* 92 經濟部為探勘某一區域之礦產，得設立探勘機構或委託其他機關為之。
 
-* 93 礦產稅按照礦產物價格，納百分之二至百分之十。前項之礦產物價格，以出產地附近市場之平均市價為標準，由農礦部、財政部按照省主管官署報告，會同核定之。
+* 93 經濟部對於特種礦業或應行增產之礦業，得就資金、器材、人力各項予以協助。
 
-* 94 礦區稅每年分二期，於一月七月繳納。礦產稅依照實際產額約計市價，按月繳納。前項按月繳納之礦產稅額，於核定平均市價後逐年清結，年終繳納之。
+* 94 經濟部為適應事實需要，得指定礦類對其探礦、採礦、選礦、冶煉事業之擴充與技術之研究予以獎勵。前項獎勵辦法由經濟部定之。
 
-* 95 農礦部或省主管官署認為必要時，得令採礦權者隨時將施工計劃及工程報告書呈候審核。前項呈報之施工計劃及工程報告書，農礦部或省主管官署認為必須變更時，得令礦業權者變更之。
+* 95 本章關於礦業權者之規定，於國營礦業權之承租人準用之。
 
-* 96 農礦部或省主管官署，對於礦業工程認為有危險或害公益時，應令礦業權者設法預防或暫行停止工作。
+* 96 有左列情形之一者，處三年以下有期徒刑或三千元以下罰金：一、以詐欺取得礦業權或違法私自採礦者。二、有第四十三條第二款情形者。
 
-* 97 礦業權銷滅後一年內，農礦部或省主管官署認為必要時，得令原礦業權者為預防危險之設備。
+* 97 未經核准私將礦業權讓與典質抵押或租賃者，處二千元以下罰金，其契約無效。
 
-* 98 採礦權者應備置坑內實測圖及礦業簿於礦業事務所，並繕具副本，送呈省主管官署。
+* 98 越出礦區以外採礦者，處一千元以下罰金。
 
-* 99 礦業權者每年一月應將全年之礦業情形，造具明細表冊，呈報農礦部及省主管官署。
+* 99 有前條及第九十六條第一款情形者，沒收其所採之礦產物，如已出售或自用時，應追繳其代價。
 
-* 100 探礦時所得礦質，須經省主管官署准許，方得出售。
+* 100 不依第八十一條至第八十三條之規定者，處五百元以下罰金。
 
-* 101 礦業權者所用主要技術人員，應就依技師登記法登記合格者，選任之。前項技術人員有不合格或不稱職時，農礦部或省主管官署得令其改任。
+* 101 違反第七十一條、第八十四條至第八十六條之規定者，處二百元以下罰金。
 
-* 102 農礦部為監察各礦礦業越見，得於礦業繁盛區域或重要礦場，設置礦業監察員。礦業監察員規程，由農礦部以部令定之。
+* 102 拒絕或妨礙該管機關檢查有關礦業之簿記或設備者，處一百元以下罰金。
 
-* 103 礦業權者遇有事故，有查勘鄰接礦區之必要時，得呈請農礦部或省主管官署派員會同各該礦業權者，實地查勘。前項規定，於其他利害關係人適用之。
+* 103 漏納礦產稅者，處應納稅額二倍以上十倍以下罰金，其情節重大者，並得將漏稅貨品沒收之。
 
-* 104 農礦部或省主管官署，以職權或因礦業呈請人或礦業權者之呈請，派員赴礦業呈請地或礦區查勘時，其費用應歸該呈請人或礦業權者負擔。
+* 104 本章關於礦業權者之規定，於國營礦業權之承租人準用之。
 
-* 105 凡專門以上學校礦科學生，願在礦場實習者，經農礦部或省主管官署令知後，各該礦業權者不得無故拒絕。實習規則由農礦部定之。
+* 105 本法施行細則由經濟部定之。
 
-* 106 省主管官署每年應將該管區域內，礦區面積、礦質、產額、礦稅收入，分別查明，編成詳細統計，於四月以前，彙呈農礦部。
+* 106 本法自公布日施行。
 
 * 107 本章關於礦業權者之規定，於國營礦業權之承租人適用之。
 
