--- a/司法-民事/保險法.md
+++ b/司法-民事/保險法.md
@@ -1,196 +1,356 @@
-* 1 本法所稱保險，謂當事人約定一方支付保險費於他方，他方對於因不可預料或不可抗力之事故所致之損害或責任，負擔賠償之契約。
+* 1 本法所稱保險，謂當事人約定，一方交付保險費於他方，他方對於因不可預料或不可抗力之事故所致之損害，負擔賠償財物之行為。根據前項所訂之契約，稱為保險契約。
 
-* 2 要保人得不經委任為他人之利益，訂立保險契約。受益人有疑義時，推定要保人為自己之利益而訂立。
+* 2 本法所稱保險人，指經營保險事業之各種組織，在保險契約成立時，有保險費之請求權；在承保危險事故發生時，依其承保之責任，負擔賠償之義務。
 
-* 3 保險契約由代理人訂立者，應載明代訂之意旨。
+* 3 本法所稱要保人，指對保險標的具有保險利益，向保險人申請訂立保險契約，並負有交付保險費義務之人。
 
-* 4 保險契約由合夥人或共有人中之一人或數人訂立，而其利益及於全體合夥人或共有人者，應載明為全體合夥人或共有人訂立之意旨。
+* 4 本法所稱被保險人，指於保險事故發生時，遭受損害，享有賠償請求權之人；要保人亦得為被保險人。
 
-* 5 為他人利益訂立之保險契約，於訂約時該他人未確定者，由要保人或保險契約所載可得確定之受益人享受其利益。
+* 5 本法所稱受益人，指被保險人或要保人約定享有賠償請求權之人，要保人或被保險人均得為受益人。
 
-* 6 本法之強制規定，不得以契約變更之，但有利於被保險人者，不在此限。
+* 6 本法所稱保險業，指依本法組織登記，以經營保險為業之機構。
 
-* 7 要保人對於財產上之現有利益，或因財產上之現有利益而生之期待利益有保險利益。
+* 7 本法所稱保險業負責人，指依公司法或合作社法應負責之人。
 
-* 8 運送人或保管人對於所運送或保管之貨物，以其所負之責任為限，有保險利益。
+* 8 本法所稱保險代理人，指根據代理契約或授權書，向保險人收取費用，並代理經營業務之人。
 
-* 9 要保人對於左列各人之生命或身體有保險利益。一、本人或其家屬。二、生活費或教育費所仰給之人。三、債務人。四、為本人管理財產或利益之人。
+* 9 本法所稱保險經紀人，指基於被保險人之利益，代向保險人洽訂保險契約，而向承保之保險業收取佣金之人。
 
-* 10 要保人或被保險人對於保險標的無保險利益者，保險契約失其效力。
+* 10 本法所稱公證人，指向保險人或被保險人收取費用，為其辦理保險標的之查勘、鑑定及估價與賠款之理算、洽商，而予證明之人。
 
-* 11 被保險人死亡或保險標的所有權移轉時，保險契約仍為繼承人或受讓人之利益而存在。但保險人，繼承人，受讓人各有終止契約之權。
+* 11 本法所稱各種責任準備金，在人壽保險，為責任準備金及特別準備金；在其他各種保險，為未滿期保費準備金，及賠款特別準備金。
 
-* 12 合夥人或共有人聯合為被保險人時，其中一人或數人讓與保險利益於他人者，保險契約不因之而失效。
+* 12 本法所稱主管機關為財政部。但保險合作社除其經營之業務，以財政部為主管機關外，其社務以合作主管機關為主管機關。
 
-* 13 凡基於有效契約而生之利益，亦得為保險利益。
+* 13 保險分為財產保險及人身保險。財產保險，包括火災保險、海上保險、陸空保險、責任保險及其他財產保險。人身保險，包括人壽保險、健康保險及傷害保險。
 
-* 14 保險契約應以保險單或暫保單為之。
+* 14 要保人對於財產上之現有利益，或因財產上之現有利益而生之期待利益，有保險利益。
 
-* 15 保險契約應記載左列各款事項，由當事人雙方簽名。一、當事人之姓名及住所。二、保險之標的。三、所保危險之性質。四、保險責任開始之日時及保險期間。五、保險金額。六、保險費。七、無效及失權之原因。八、訂約之年月日。
+* 15 運送人或保管人對於所運送或保管之貨物，以其所負之責任為限，有保險利益。
 
-* 16 保險契約除人身保險外，得為指示式或無記名式。保險人對於要保人所得為之抗辯，亦得以之對抗保險契約之受讓人。
+* 16 要保人對於左列各人之生命或身體，有保險利益：一、本人或其家屬。二、生活費或教育費所仰給之人。三、債務人。四、為本人管理財產或利益之人。
 
-* 17 保險契約為不定額保險契約及定額保險契約。不定額保險契約，為契約上載明保險標的之價額，須至危險發生後，估計而定之保險契約。定額保險契約，為契約上載明保險標的一定價額之保險契約。
+* 17 要保人或被保險人，對於保險標的物無保險利益者，保險契約失其效力。
 
-* 18 保險契約訂立時，保險標的之危險已發生或已消滅者，其契約無效。但為當事人雙方所不知者，不在此限。訂約時僅要保人知危險已發生者，保險人不受契約之拘束。訂約時僅保險人知危險已消滅者，要保人不受契約之拘束。
+* 18 被保險人死亡或保險標的物所有權移轉時，保險契約除另有訂定外，仍為繼承人或受讓人之利益而存在。
 
-* 19 變更保險契約或恢復停止效力之保險契約時，保險人於接到通知後十五日內不為拒絕者，視為承諾。但人壽保險不在此期。
+* 19 合夥人或共有人聯合為被保險人時，其中一人或數人讓與保險利益於他人者，保險契約不因之而失效。
 
-* 20 當事人之一方對於他方應通知之事項而怠於通知者，不問是否故意，他方得據為解除保險契約之原因。
+* 20 凡基於有效契約而生之利益，亦得為保險利益。
 
-* 21 要保人，被保險人或益人，遇有保險人應負保險責任之事故發生，應於知悉後五日內通知保險人。
+* 21 保險費分一次交付及分期交付兩種。保險契約規定一次交付，或分期交付之第一期保險費，應於契約生效前交付之。但保險契約簽訂時，保險費未能確定者，不在此限。
 
-* 22 要保人對於保險契約內所載增加危險之情形應通知者，應於知悉後通知保險人。危險增加由於要保人或被保險人之行為所致者，其危險程度如在訂約時為保險人所知，即須增加保險費，或不訂約者，要保人或被保險人應先通知保險人。危險增加不由於要保人或被保險人之行為所致者，要保人或被保險人應於知悉後十五日內通知保險人。
+* 22 保險費應由要保人依契約規定交付。要保人為他人利益訂立之保險契約，保險人對於要保人所得為之抗辯，亦得以之對抗受益人。
 
-* 23 保險人遇有前條情形，得終止契約，或提議另定保險費，要保人對於另定保險費不同意者，其契約即為終止。但因前條第二項情形終止契約時，保險人如有損失，並得請求賠償。保險人知危險增加後，仍繼續收受保險費，或於危險發生後，給付賠償金額，或有其他維持契約之表示者，喪失前項之權利。
+* 23 以同一保險利益，同一保險事故，善意訂立數個保險契約，其保險金額之總額超過保險標的之價值者，在危險發生前，要保人得依超過部份，要求比例返還保險費。保險契約因第三十七條之情事而無效時，保險人於不知情之時期內，仍取得保險費。
 
-* 24 危險增加，如有左列情形之一時，不適用第二十一條之規定。一、對於災害之發生及保險人之負擔無影響者。二、為防護保險人之利益者。三、為履行道德上之義務者。
+* 24 保險契約因第五十一條第二項之情事，而保險人不受拘束時，保險人得請求償還費用。其已收受之保險費，無須返還。保險契約因第五十一條第三項之情事而要保人不受拘束時，保險人不得請求保險費及償還費用。其已收受者，應返還之。保險契約因第六十條或第八十一條之情事而終止，或部份終止時，除保險費非以時間為計算基礎者外，終止後之保險費已交付者，應返還之。
 
-* 25 當事人之一方，對於左列各款，不負通知之義務。一、為他方所知者。二、依通常注意為他方所應知或無方法諉為不知者。三、一方對於他方，經聲明不必通知者。
+* 25 保險契約因第六十四條第二項之情事而解除時，保險人無須返還其已收受之保險費。
 
-* 26 要保人或被保險人不於第二十一條或第二十二條第三項所規定之期限內為通知者，對於保險人因此所受之損失，應負賠償責任。
+* 26 保險費依保險契約所載增加危險之特別情形計算者，其情形在契約存續期內消滅時，要保人得按訂約時保險費率，自其情形消滅時起算，請求比例減少保險費。保險人對於前項減少保險費不同意時，要保人得終止契約，其終止後之保險費已交付者，應返還之。
 
-* 27 訂立契約時，要保人對於保險人之書面詢問，應為聲明。要保人故意或因過失遺漏或為不實之聲明時，其遺漏或不實之聲明足以變易或減少保險人對於危險之估計者，保險人得解除契約，其危險發生後亦同。前項解除權，自保險人知有解除之原因後，經過一個月不行使而消滅，契約訂立後經過二年者亦同。
+* 27 保險人破產時，保險契約於破產宣告之日終止，其終止後之保險費，已交付者，保險人應返還之。
 
-* 28 特約條款，為當事人於保險契約基本條款外，承認履行特種義務之條款。
+* 28 要保人破產時，保險契約仍為破產債權人之利益而存在。但破產管理人或保險人得於破產宣告三個月內終止契約，其終止後之保險費已交付者，應返還之。
 
-* 29 與保險契約有關之一切事項，不問過去現在或將來，均得以特約條款定之。
+* 29 保險人對於由不可預料或不可抗力之事故所致之損害，負賠償責任。但保險契約內有明文限制者，不在此限。保險人對於由要保人或被保險人或其代理人之過失所致之損害，負賠償責任。但出於要保人或被保險人或其代理人之故意者，不在此限。
 
-* 30 保險契約當事人之一方違背特約條款時，他方得解除契約，其危險發生後亦同。第二十七條第三項之規定，於前項情形準用之。
+* 30 保險人對於履行道德上之義務所致之損害，應負賠償責任。
 
-* 31 關於未來事項之特約條款，於未屆履行期前危險已發生，或其履行為不可能，或在訂約地為不合法而未履行者，保險契約不因之而失效。
+* 31 保險人對於因要保人或被保險人之受僱人，或其所有之物或動物所致之損害，應負賠償責任。
 
-* 32 要保人應於約定時期給付保險費。為他人利益訂立之保險契約，其保險費應由要保人給付之。但保險人對於要保人所得為之抗辯，亦得以之對抗受益人。
+* 32 保險人對於因戰爭所致之損害，除契約有相反之訂定外，應負賠償責任。
 
-* 33 人壽保險之保險費到期未給付者，經催告後逾一個月仍不給付時，保險契約之效力停止。催告應送達於要保人或負有給付保險費義務之人之最後住所，保險費經催告後，應於保險人營業所給付之。第一項停止效力之保險契約，於保險費及其他費用清償後翌日之正午恢復其效力。保險人於第一項所規定之期限屆滿後，有終止契約之權。
+* 33 保險人對於要保人或被保險人，為避免或減輕損害之必要行為所生之費用，負償還之責。其償還數額與賠償金額，合計雖超過保險標的之價值，仍應償還。但契約另有訂定者，不在此限。保險人對於前項費用之償還，以保險金額對於保險標的之價值比例定之。
 
-* 34 以同一保險利益、同一危險善意訂立數個保險契約，其保險金額之總額超過保險標的之價額者，在危險發生前，被保險人得依超過部份要求比例返還保險費。保險契約因第四十六條之情事而無效時，保險人於不知情之時期內，仍取得保險費。
+* 34 應付之賠償金額確定後，保險人應於約定期限內給付之；無約定者，應於接到通知後十五日內給付之。除本法另有規定，或當事人另有約定外，保險人不負擔賠償金額以外之義務。
 
-* 35 保險契約因第十八條第二項之情事，而保險人不受拘束時，保險人得請求償還費用，其已受領之保險費，無須返還。保險契約因第十八條第三項之情事，而要保人不受拘束時，保險人不得請求保險費及償還費用，其已受領者，應返還之。保險契約因第六十二條之情事而終止時，終止後之保險費已給付者，應返還之。
+* 35 複保險，謂要保人對於同一保險利益，同一保險事故，與數保險人分別訂立數個保險之契約行為。
 
-* 36 保險契約因第二十七條第二項之情事而解除時，保險人無須返還其已受領之保險費。
+* 36 複保險，除另有約定外，要保人應將他保險人之名稱及保險金額通知各保險人。
 
-* 37 保險費依保險契約所載增加危險之特別情形計算者，其情形在契約存續期內消滅時，要保人得按訂約時保險費率，自其情形消滅時起算，請求比例減少保險費。保險人對於前項減少保險費不同意時，要保人得終止契約。
+* 37 要保人故意不為前條之通知，或意圖不當得利而為複保險者，其契約無效。
 
-* 38 保險人破產時，保險契約於破產宣告之日終止，其終止後之保險費已給付者，要保人得請求返還。
+* 38 善意之複保險，其保險金額之總額超過保險標的之價值者，除另有約定外，各保險人對於保險標的之全部價值，僅就其所保金額負比例分擔之責。但賠償總額，不得超過保險標的之價值。
 
-* 39 要保人破產時，保險契約仍為破產債權人之利益而存在。但破產管理人或保險人得於破產宣告後三個月內終止契約，其終止後之保險費已給付者，應返還之。
+* 39 再保險，謂保險人以其所承保之危險，轉向他保險人為保險之契約行為。
 
-* 40 保險人對於由不可預料或不可抗力所致之損害時責任，負賠償責任。但保險契約內有明文限制者，不在此限。保險人對於由要保人或被保險人之過失所致之損害或責任，負賠償責任。但出於要保人或被保險人之故意者，不在此限。
+* 40 原保險契約之被保險人，對於再保險人無賠償請求權。
 
-* 41 保險人對於因履行道德上之義務所致之損害或責任，應負賠償責任。
+* 41 再保險人不得向原保險契約之要保人，請求交付保險費。
 
-* 42 保險人對於因要保人，或被保險人之受僱人，或其所有之物，或動物所致之損害或責任，應負賠償責任。
+* 42 原保險人不得以再保險人不履行再保險金額給付之義務為理由，拒絕或延遲履行其對於被保險人之義務。
 
-* 43 應付之保險金額，保險人應於約定期限內給付之，無約定者，應於接到通知後十五日內給付之。除本法另有規定，或當事人另有約定外，保險人不負擔保險金額以外之義務。
+* 43 保險契約，應以保險單或暫保單為之。
 
-* 44 複保險為要保人對於同一保險利益，同一危險，與數保險人分別訂立數個保險之契約。
+* 44 保險契約，由保險人於同意要保人聲請後簽訂。利害關係人，均得向保險人請求保險契約之謄本。
 
-* 45 複保險除另有約定外，要保人應將他保險人之姓名及保險金額通知各保險人。
+* 45 要保人得不經委任，為他人之利益訂立保險契約。受益人有疑義時，推定要保人為自己之利益而訂立。
 
-* 46 要保人故意不為前條之通知，或意圖不當得利而為複保險者，其契約無效。
+* 46 保險契約由代理人訂立者，應載明代訂之意旨。
 
-* 47 善意之複保險，其保險金額之總額超過保險標的之價值者，除另有約定外，各保險人對於保險標的之全部價值，僅就其所保金額，負比例分擔之責。但賠償總額不得超過保險標的之價值。
+* 47 保險契約由合夥人或共有人中之一人或數人訂立，而其利益及於全體合夥人或共有人者，應載明為全體合夥人或共有人訂立之意旨。
 
-* 48 再保險為保險人以其所承保之危險，轉向他保險人為責任保險之契約。
+* 48 保險人得約定保險標的物之一部份，應由要保人自行負擔由危險而生之損失。有前項約定時，要保人不得將未經保險之部份，另向他保險人訂立保險契約。
 
-* 49 原保險契約之被保險人，對於再保險人無賠償請求權。
+* 49 保險契約除人身保險外，得為指示式或無記名式。保險人對於要保人所得為之抗辯，亦得以之對抗保險契約之受讓人。
 
-* 50 保險人訂立再保險契約時，應將被保險人所有之聲明，及與危險有關所得之通知，轉告再保險人。
+* 50 保險契約分不定值保險契約，及定值保險契約。不定值保險契約，為契約上載明保險標的之價值，須至危險發生後估計而訂之保險契約。定值保險契約，為契約上載明保險標的一定價值之保險契約。
 
-* 51 由保險契約所生之權利，自得為請求之日起，經過二年不行使而消滅。有左列情形之一者，其二年期限之起算，依左列之規定。一、要保人或被保險人對於危險之聲明有遺漏或不實者，自保險人知情之時起算。二、危險發生後，利害關係人能證明其非因疏忽而不知情者，自其知情之時起算。三、要保人或被保險人對於保險人之請求，係由於第三人之請求而生者，自要保人或被保險人受請求時起算。
+* 51 保險契約訂立時，保險標的之危險已發生或已消滅者，其契約無效。但為當事人雙方所不知者，不在此限。訂約時，僅要保人知危險已發生者，保險人不受契約之拘束。訂約時，僅保險人知危險已消滅者，要保人不受契約之拘束。
 
-* 52 損失保險為賠償毀損或滅失之契約。
+* 52 為他人利益訂立之保險契約，於訂約時，該他人未確定者，由要保人或保險契約所載可得確定之受益人，享受其利益。
 
-* 53 保險人對於所保危險所生之損失，負賠償之責。因救護保險標的，致保險標的發生損失者，視同所保危險所生之損失。
+* 53 被保險人因保險人應負保險責任之損失發生，而對於第三人有損失賠償請求權者，保險人得於給付賠償金額後，代位行使被保險人對於第三人之請求權。但其所請求之數額，以不逾賠償金額為限。前項第三人為被保險人之家屬或受僱人時，保險人無代位請求權。但損失係由其故意所致者，不在此限。
 
-* 54 保險人得約定保險標的之一部分，應由要保人自行負擔由危險而生之損失。有前項約定時，要保人不得將未經保險之部分，另向他保險人訂立保險契約。
+* 54 本法之強制規定，不得以契約變更之。但有利於被保險人者，不在此限。
 
-* 55 保險人之賠償金額，不得超過保險標的在保險事故發生時價值之總額。
+* 55 保險契約，除本法另有規定外，應記載左列各款事項：一、當事人之姓名及住所。二、保險之標的物。三、保險事故之種類。四、保險責任開始之日、時及保險期間。五、保險金額。六、保險費。七、無效及失權之原因。八、訂約之年、月、日。
 
-* 56 保險金額超過保險標的價值之契約，係由當事人一方之詐欺而訂立者，他方得解除契約，如有損失，並得請求賠償。無詐欺情事者，其契約僅於保險標的價值之限度內為有效。無詐欺情事之保險契約，經當事人一方將超過價值之事實通知他方後，保險金額及保險費，均應按照保險標的之價值比例減少。
+* 56 變更保險契約或恢復停止效力之保險契約時，保險人於接到通知後十日內不為拒絕者，視為承諾。但人壽保險不在此限。
 
-* 57 保險標的不能以市價估計者，得由當事人約定其價值。
+* 57 當事人之一方對於他方應通知之事項而怠於通知者，除不可抗力之事故外，不問是否故意，他方得據為解除保險契約之原因。
 
-* 58 保險金額不及保險標的之價值者，除契約另有訂定外，保險人之負擔，以保險金額對於保險標的之價值比例定之。
+* 58 要保人、被保險人或受益人，遇有保險人應負保險責任之事故發生，除本法另有規定，或契約另有訂定外，應於知悉後五日內通知保險人。
 
-* 59 保險人或被保險人為證明及估計損失所支出之必要費用，除契約另有訂定外，由保險人負擔之。保險金額不及保險標的之價值時，保險人對於前項費用，依前條規定比例負擔之。
+* 59 要保人對於保險契約內所載增加危險之情形應通知者，應於知悉後通知保險人。危險增加，由於要保人或被保險人之行為所致，其危險達於應增加保險費或終止契約之程度者，要保人或被保險人應先通知保險人。危險增加，不由於要保人或被保險人之行為所致者，要保人或被保險人應於知悉後十日內通知保險人。危險減少時，被保險人得請求保險人重新核定保費。
 
-* 60 保險人對於要保人或被保險人為避免或減輕損失之必要行為所生之費用，負償還之責，其償還數額與賠償金額合計，雖超過保險標的之價值，仍應償還。但契約另有訂定者，不在此限。前條第二項之規定，於前項之費用償還準用之。
+* 60 保險遇有前條情形，得終止契約，或提議另定保險費。要保人對於另定保險費不同意者，其契約即為終止。但因前條第二項情形終止契約時，保險人如有損失，並得請求賠償。保險人知危險增加後，仍繼續收受保險費，或於危險發生後給付賠償金額，或其他維持契約之表示者，喪失前項之權利。
 
-* 61 損失未估定前，要保人或被保險人除為公共利益或因限制損失外，非經保險人同意，對於保險標的，不得加以變更。
+* 61 危險增加如有左列情形之一時，不適用第五十九條之規定：一、損害之發生不影響保險人之負擔者。二、為防護保險人之利益者。三、為履行道德上之義務者。
 
-* 62 保險標的非因保險契約所載之事故而完全滅失時，保險契約即為終止。
+* 62 當事人之一方對於左列各款，不負通知之義務：一、為他方所知者。二、依通常注意為他方所應知，或無法諉為不知者。三、一方對於他方經聲明不必通知者。
 
-* 63 保險標的受部分之損失者，保險人與要保人均有終止契約之權。前項終止契約權，於賠償金額給付後，經過一個月不行使而消滅。保險人終止契約時，應於十五日前通知要保人。要保人與保險人均不終止契約時，除契約另有訂定外，保險人對於以後事故所致之損失，其責任以賠償保險金額之餘額為限，並按其比例收取以後之保險費。
+* 63 要保人或被保險人不於第五十八條、第五十九條第三項所規定之期限內為通知者，對於保險人因此所受之損失，應負賠償責任。
 
-* 64 被保險人因保險人應負保險責任之損失發生，而對於第三人有損失賠償請求權者，保險人得於給付保險金額後，代位行使被保險人對於第三人之請求權。但其所請求之數額，以不逾所賠償之保險金額為限。前項第三人為被保險人之家屬或僱用人時，保險人無代位請求權。但損失係由其故意所致者，不在此限。
+* 64 訂立契約時，要保人對於保險人之書面詢問，應據實說明。要保人故意隱匿，或因過失遺漏，或為不實之說明時，其隱匿、遺漏或不實之說明，足以變更或減少保險人對於危險之估計者，保險人得解除契約；其危險發生後亦同。前項解除契約權，自保險人知有解除之原因後，經過一個月不行使而消滅；或契約訂立後經過二年，即有可以解除之原因，亦不得解除契約。
 
-* 65 火災保險人對於由火災所致保險標的之毀損或滅失，負賠償之責。
+* 65 由保險契約所生之權利，自得為請求之日起，經過二年不行使而消滅。有左列各款情形之一者，其期限之起算，依各該款之規定：一、要保人或被保險人對於危險之說明，有隱匿、遺漏或不實者，自保險人知情之日起算。二、危險發生後，利害關係人能證明其非因疏忽而不知情者，自其知情之日起算。三、要保人或被保險人對於保險人之請求，係由於第三人之請求而生者，自要保人或被保險人受請求之日起算。
 
-* 66 就集合之物而總括為保險者，被保險人之家屬僱用人或同居人之物亦享受保險之利益，其保險契約，視同並為第三人之利益而訂立。
+* 66 特約條款，為當事人於保險契約基本條款外，承認履行特種義務之條款。
 
-* 67 損失之估計因可歸責於保險人之事由而遲延者，應自被保險人交出損失清單一個月後加給利息，損失清單交出二個月後，損失尚未完全估定者，被保險人得請求先行交付其所應得之最低保險金額。
+* 67 與保險契約有關之一切事項，不問過去、現在或將來，均得以特約條款定之。
 
-* 68 責任保險人於被保險人對於第三人負損失賠償責任而受賠償之請求時，負賠償之責。
+* 68 保險契約當事人之一方違背特約條款時，他方得解除契約；其危險發生後亦同。第六十四條第三項之規定，於前項情形準用之。
 
-* 69 被保險人因受第三人之請求，而為抗辯所支出之訴訟上或訴訟外必要費用，除契約另有訂定外，由保險人負擔之。被保險人得請求保險人墊給前項費用。
+* 69 關於未來事項之特約條款，於未屆履行期前危險已發生，或其履行為不可能，或在訂約地為不合法而未履行者，保險契約不因之而失效。
 
-* 70 責任保險契約係為被保險人所營之事業而訂立者，被保險人之代理人、管理人或監督人所負之損失賠償責任，亦享受保險之利益，其契約視同並為第三人之利益而訂立。
+* 70 火災保險人，對於由火災所致保險標的物之毀損或滅失，除契約另有訂定外，負賠償之責。因救護保險標的物，致保險標的物發生損失者，視同所保危險所生之損失。
 
-* 71 保險人得約定被保險人對於第三人就其責任所為之承認和解或賠償，未經其參預者，不受拘束。
+* 71 就集合之物而總括為保險者，被保險人家屬、受僱人或同居人之物，亦得為保險標的，載明於保險契約，在危險發生時，就其損失享受賠償。前項保險契約，視同並為第三人利益而訂立。
 
-* 72 保險人於第三人由被保險人應負責任事故所致之損失，未受賠償以前，不得以保險金額之全部，或一部給付被保險人。
+* 72 保險金額，為保險人在保險期內，所負責任之最高額度。保險人應於承保前，查明保險標的物之市價，不得超額承保。
 
-* 73 人身保險為死亡或生存之人壽保險，及人身之傷害保險。
+* 73 保險標的，得由要保人，依主管機關核定之費率及條款，作定值或不定值約定之要保。保險標的，以約定價值為保險金額者，發生全部損失或部份損失時，均按約定價值為標準計算賠償。保險標的，未經約定價值者，發生損失時，按保險事故發生時實際價值為標準，計算賠償，其賠償金額，不得超過保險金額。
 
-* 74 人身保險之保險金額，依保險契約之所定。
+* 74 第七十三條所稱全部損失，係指保險標的全部滅失或毀損，達於不能修復，或其修復之費用，超過保險標的恢復原狀所需者。
 
-* 75 人身保險之保險人，不得代位行使，要保人或受益人因保險事故所生對於第三人之請求權。
+* 75 保險標的物不能以市價估計者，得由當事人約定其價值，賠償時從其約定。
 
-* 76 人壽保險契約，得由本人或第三人訂立之。
+* 76 保險金額超過保險標的價值之契約，係由當事人一方之詐欺而訂立者，他方得解除契約，如有損失，並得請求賠償；無詐欺情事者，除定值保險外，其契約僅於保險標的價值之限度內為有效。無詐欺情事之保險契約，經當事人一方將超過價值之事實通知他方後，保險金額及保險費，均應按照保險標的之價值比例減少。
 
-* 77 由第三人訂立之死亡保險契約，未經被保險人書面承認，並約定保險金額，其契約無效。
+* 77 保險金額不及保險標的物之價值者，除契約另有訂定外，保險人之負擔，以保險金額對於保險標的物之價值比例定之。
 
-* 78 由第三人訂立之人壽保險契約，其權利之移轉或出質，非經被保險人以書面承認者，不生效力。
+* 78 損失之估計，因可歸責於保險人之事由而遲延者，應自被保險人交出損失清單一個月後加給利息。損失清單交出二個月後損失尚未完全估定者，被保險人得請求先行交付其所應得之最低賠償金額。
 
-* 79 以十四歲以下之未成年人，或心神喪失或精神耗弱之人為被保險人，而訂立之死亡保險契約無效。保險人或要保人故意違反前項之規定者，處一年以下有期徒刑，拘役或五百元以下罰金。
+* 79 保險人或被保險人為證明及估計損失所支出之必要費用，除契約另有訂定外，由保險人負擔之。保險金額不及保險標的物之價值時，保險人對於前項費用，依第七十七條規定比例負擔之。
 
-* 80 人壽保險契約，除記載第十五條規定事項外，應記載左列事項。一、被保險人之姓名性別及年齡。二、受益人之姓名或確定受益人之方法。三、請求保險金額之事故及時期。四、依第八十九條之規定，有減少保險金額之條件者，其條件。
+* 80 損失未估定前，要保人或被保險人除為公共利益或避免擴大損失外，非經保險人同意，對於保險標的物不得加以變更。
 
-* 81 被保險人故意自殺者，保險人無給付保險金額之義務。但應將保險之責任準備金，返還於應得之人。保險契約載有被保險人故意自殺，保險人仍應給付保險金額之條款者，其條款於訂約二年後始生效力。恢復停止效力之保險契約，其二年期限，應自恢復停止效力之日起算。被保險人因犯罪致死者，保險人不負給付保險金額之義務。但保險費已付足三年以上者，保險人應將其責任準備金返還於應得之人。
+* 81 保險標的物非因保險契約所載之保險事故而完全滅失時，保險契約即為終止。
 
-* 82 要保人得通知保險人，以保險金額之全部或一部，給付其所指定之受益人一人或數人。前項指定之受益人，以於請求保險金額時生存者為限。
+* 82 保險標的物受部份之損失者，保險人與要保人均有終止契約之權。終止後，已交付未損失部分之保險費應返還之。前項終止契約權，於賠償金額給付後，經過一個月不行使而消滅。保險人終止契約時，應於十五日前通知要保人。要保人與保險人均不終止契約時，除契約另有訂定外，保險人對於以後保險事故所致之損失，其責任以賠償保險金額之餘額為限。
 
-* 83 受益人經指定後，要保人仍有以契約或遺囑處分其保險利益之權。但要保人聲明拋棄處分權者，不在此限。要保人行使前項處分權，非經通知，不得對抗保險人。
+* 83 海上保險人對於保險標的物，除契約另有規定外，因海上一切事變及災害所生之毀損、滅失及費用，負賠償之責。
 
-* 84 死亡保險契約無受益人者，其保險金額作為被保險人之遺產。
+* 84 關於海上保險，適用海商法海上保險章之規定。
 
-* 85 保險金額約定於被保險人死亡時，給付於其所指定之受益人者，其金額不得作為被保險人之遺產。
+* 85 陸上、內河及航空保險人，對於保險標的物，除契約另有訂定外，因陸上、內河及航空一切事變及災害所致之毀損、滅失及費用，負賠償之責。
 
-* 86 受益人非經要保人之同意，或保險契約載明允許轉讓者，不得將其利益轉讓他人。
+* 86 關於貨物之保險，除契約另有訂定外，自交運之時以迄於其目的地收貨之時為其期間。
 
-* 87 保險人對於保險費，不得以訴訟請求給付。保險費有未給付時，保險人得依第三十三條第一項之規定終止契約，或依保險契約所載條件，減少保險金額。契約終止時，保險費已付足三年以上者，保險人應返還其責任準備金。保險人以終身為期，不附生存條件之死亡保險契約，或契約訂定於若干年後，給付保險金額或年金者，如保險費已付足三年以上而有不付時，保險人僅得減少保險金額或年金之數額。
+* 87 保險契約，除記載第五十五條規定事項外，並應載明左列事項：一、運送路線及方法。二、運送人姓名或商號名稱。三、交運及取貨地點。四、運送有期限者其期限。
 
-* 88 利害關係人均得為要保人代付保險費。
+* 88 因運送上之必要，暫時停止或變更運送路線或方法時，保險契約除另有訂定外，仍繼續有效。
 
-* 89 減少保險金額之條件，及契約終止時減少之數額，應載明於保險契約。保險金額減少後之金額，不得少於要保人依訂原約時之估價，訂立同類保險契約，將原契約終止時已有之責任準備金額，減去不逾原保險金額百分之一之數額後，以其全部作為保險費一次給付所能得之金額。保險金額之一部，係因其保險費全數一次給付而訂定者，不因其他部份之分期給付保險費之不給付而受影響。
+* 89 航行內河船舶運費及裝載貨物之保險，除本節另有規定外，準用海上保險有關條文之規定。
 
-* 90 要保人於付足保險費三年以上後，得向保險人換取保險金額之一部。換取之條件及可得之保險金額，應載明於保險契約。保險人接到要保人換取之通知後，得約定一個月以下之期間，給付可得換取之金額。要保人由換取而得之金額，不得少於其應得責任準備金之四分三。保險契約於要保人換取保險金額後，即時終止。
+* 90 責任保險人於被保險人對於第三人，依法應負賠償責任，而受賠償之請求時，負賠償之責。
 
-* 91 保險費付足三年以上者，要保人得以保險契約為質，向保險人借款。保險人於接到要保人借款之通知後，得約定一個月以下之期間給付可得質借之金額。
+* 91 被保險人因受第三人之請求而為抗辯，所支出之訴訟上或訴訟外之必要費用，除契約另有訂定外，由保險人負擔之。被保險人得請求保險人墊給前項費用。
 
-* 92 受益人故意致被保險人於死者，無請求保險金額之權，保險費付足三年以上者，保險人應將其責任準備金給付於應得之人。受益人故殺被保險人未遂時，被保險人得撤銷其受益權利。
+* 92 保險契約係為被保險人所營事業之損失賠償責任而訂立者，被保險人之代理人、管理人或監督人所負之損失賠償責任，亦享受保險之利益，其契約視同並為第三人之利益而訂立。
 
-* 93 被保險人年齡不實，而其真實年齡已超過保險人所定保險年齡限度者，其契約無效。因被保險人年齡不實，致所付之保險費少於應付數額者，保險金額應按照所付之保險費與被保險人之真實年齡比例減少之。因被保險人年齡不實，致保險費收取逾額者，保險人應將其逾額部分返還之。
+* 93 保險人得約定被保險人對於第三人就其責任所為之承認、和解或賠償，未經其參預者，不受拘束。
 
-* 94 保險人破產時，受益人對於保險人得請求之保險金額之債權，以其保險責任準備金按訂約時之保險費率比例計算之。要保人破產時，保險契約定有受益人者，仍為受益人之利益而存在。
+* 94 保險人於第三人由被保險人應負責任事故所致之損失，未受賠償以前，不得以賠償金額之全部或一部給付被保險人。
 
-* 95 傷害保險除本節有規定外，適用關於人壽保險之規定。但第八十七條、第八十九條及第九十條之規定，不在此限。
+* 95 保險人得經被保險人通知，直接對第三人為賠償金額之給付。
 
-* 96 被保險人不與要保人為同一人時，得僅載明被保險人之職業或職務，不適用第八十條之規定。前項情形，不適用第七十九條關於禁止為十四歲以下之未成年人訂立保險契約之規定。
+* 96 其他財產保險為不屬於火災保險、海上保險、陸空保險及責任保險之範圍，而以財物或無形利益為保險標的之各種保險。
 
-* 97 第五十九條第一項及第六十條之規定，於傷害保險準用之。
+* 97 保險人有隨時查勘保險標的物之權，如發現全部或一部份處於不正常狀態，經建議要保人或被保險人修復後，再行使用。如要保人或被保險人不接受建議時，得以書面通知終止保險契約或其有關部份。
 
-* 98 本法施行日期，以命令定之。
+* 98 要保人或被保險人，對於保險標的物未盡約定保護責任所致之損失，保險人不負賠償之責。危險事故發生後，經鑑定係因要保人或被保險人未盡合理方法保護標的物，因而增加之損失，保險人不負賠償之責。
+
+* 99 保險標的物受部份之損失，經賠償或回復原狀後，保險契約繼續有效。但與原保險情況有異時，得增減其保險費。
+
+* 100 第七十三條至第八十條、第一百二十三條及第一百二十四條之規定，於其他財產保險準用之。
+
+* 101 人壽保險人於被保險人在契約規定年限內死亡，或屆契約規定年限而仍生存時，依照契約，負給付保險金額之責。
+
+* 102 人壽保險之保險金額，依保險契約之所定。
+
+* 103 人壽保險之保險人，不得代位行使要保人或受益人因保險事故所生對於第三人之請求權。
+
+* 104 人壽保險契約，得由本人或第三人訂立之。
+
+* 105 由第三人訂立之死亡保險契約，未經被保險人書面承認，並約定保險金額，其契約無效。
+
+* 106 由第三人訂立之人壽保險契約，其權利之移轉或出質，非經被保險人以書面承認者，不生效力。
+
+* 107 以十四歲以下之未成年人，或心神喪失或精神耗弱之人為被保險人，而訂立之死亡保險契約無效。保險人或要保人故意違反前項之規定者，處一年以下有期徒刑拘役或五百元以下罰金。
+
+* 108 人壽保險契約，除記載第五十五條規定事項外，並應載明左列事項：一、被保險人之姓名、性別、年齡及住所。二、受益人姓名及與被保險人之關係或確定受益人之方法。三、請求保險金額之保險事故及時期。四、依第一百十八條之規定，有減少保險金額之條件者，其條件。
+
+* 109 被保險人故意自殺者，保險人不負給付保險金額之責任。但應將保險之責任準備金返還於應得之人。保險契約載有被保險人故意自殺，保險人仍應給付保險金額之條款者，其條款於訂約二年後始生效力。恢復停止效力之保險契約，其二年期限應自恢復停止效力之日起算。被保險人因犯罪處死或拒捕或越獄致死者，保險人不負給付保險金額之責任。但保險費已付足二年以上者，保險人應將其責任準備金返還於應得之人。
+
+* 110 要保人得通知保險人，以保險金額之全部或一部，給付其所指定之受益人一人或數人。前項指定之受益人，以於請求保險金額時生存者為限。
+
+* 111 受益人經指定後，要保人對其保險利益，除聲明放棄處分權者外，仍得以契約或遺囑處分之。要保人行使前項處分權，非經通知，不得對抗保險人。
+
+* 112 保險金額約定於被保險人死亡時給付於其所指定之受益人者，其金額不得作為被保險人之遺產。
+
+* 113 死亡保險契約未指定受益人者，其保險金額作為被保險人之遺產。
+
+* 114 受益人非經要保人之同意，或保險契約載明允許轉讓者，不得將其利益轉讓他人。
+
+* 115 利害關係人，均得代要保人交付保險費。
+
+* 116 人壽保險之保險費到期未交付者，除契約另有訂定外，經催告到達後逾三十日，仍不交付時，保險契約之效力停止。催告應送達於要保人，或負有交付保險費義務之人之最後住所或居所。保險費經催告後，應於保險人營業所交付之。第一項停止效力之保險契約，於保險費及其他費用清償後，翌日上午零時，開始恢復其效力。保險人於第一項所規定之期限屆滿後，有終止契約之權。
+
+* 117 保險人對於保險費，不得以訴訟請求交付。保險費如有未能依約交付時，保險人得依前條第四項之規定終止契約，或依保險契約所載條件減少保險金額或年金。保險契約終止時，保險費已付足二年以上者，保險人應返還其責任準備金。以被保險人終身為期，不附生存條件之死亡保險契約，或契約訂定於若干年後給付保險金額或年金者，如保險費已付足二年以上而有不交付時，保險人僅得減少保險金額或年金。
+
+* 118 保險人依前條規定，或因要保人請求，得減少保險金額或年金。其條件及可減少之數額，應載明於保險契約。減少保險金額或年金，應以訂原約時之條件，訂立同類保險契約為計算標準。其減少後之金額，不得少於原契約終止時已有之責任準備金，減去營業費用，而以之作為保險費一次交付所能得之金額。營業費用以原保險金額百分之一為限。保險金額之一部，係因其保險費全數一次交付而訂定者，不因其他部份之分期交付保險費之不交付而受影響。
+
+* 119 要保人終止保險契約，而保險費已付足二年以上者，保險人應於接到通知後一個月內償付解約金，其金額不得少於要保人應得責任準備金之四分之三。償付解約金之條件及金額，應載明於保險契約。
+
+* 120 保險費付足二年以上者，要保人得以保險契約為質，向保險人借款。保險人於接到要保人之借款通知後，得於一個月以內之期間，貸給可得質借之金額。
+
+* 121 受益人故意致被保險人於死者，無請求保險金額之權。保險費付足二年以上者，保險人應將其責任準備金給付與其他應得之人。受益人故意殺害被保險人未遂時，其受益權應予撤銷。要保人故意致被保險人於死者，保險人不負給付保險金額之責。保險費付足二年以上者，保險人應將其責任準備金給付與應得之人；無應得之人時，應解交國庫。
+
+* 122 被保險人年齡不實，而其真實年齡已超過保險人所定保險年齡限度者，其契約無效。但被保險人之真實年齡未達法定年齡之最低規定者，其保險契約，自被保險人到達規定年齡之日起生效。因被保險人年齡不實，致所付之保險費少於應付數額者，保險金額應按照所付之保險費與被保險人之真實年齡比例減少之。因被保險人年齡不實，致保險費收取逾額者，保險人應將其逾額部份返還之。
+
+* 123 保險人破產時，受益人對於保險人得請求之保險金額之債權，以其保險責任準備金按訂約時之保險費率比例計算之。要保人破產時，保險契約定有受益人者，仍為受益人之利益而存在。
+
+* 124 人壽保險之要保人、被保險人、受益人，對於保險人為被保險人所提存之責任準備金，有優先受償之權。
+
+* 125 健康保險人於被保險人疾病、分娩及其所致殘廢或死亡時，負給付保險金額之責。
+
+* 126 保險人於訂立保險契約前，對於被保險人得施以健康檢查。前項檢查費用，由保險人負擔。
+
+* 127 保險契約訂立時，被保險人已在疾病或妊娠情況中者，保險人對是項疾病或分娩，不負給付保險金額之責任。
+
+* 128 被保險人故意自殺或墮胎所致疾病、殘廢、流產或死亡，保險人不負給付保險金額之責。
+
+* 129 被保險人不與要保人為同一人時，保險契約除載明第五十五條規定事項外，並應載明左列各款事項：一、被保險人之姓名、性別、年齡、職業及住所。二、被保險人與要保人之關係。
+
+* 130 第一百零二條至第一百零四條及第一百十五條之規定，於健康保險準用之。
+
+* 131 傷害保險人於被保險人遭受意外傷害及其所致殘廢或死亡時，負給付保險金額之責。
+
+* 132 傷害保險契約，除記載第五十五條規定事項外，並應載明左列事項：一、被保險人之姓名、性別、年齡、職業、住所及與要保人之關係。二、受益人之姓名及與被保險人之關係，或確定受益人之方法。三、請求保險金額之事故及時期。
+
+* 133 被保險人故意自殺，或因犯罪行為，所致傷害、殘廢或死亡，保險人不負給付保險金額之責任。
+
+* 134 受益人故意傷害被保險人者，無請求保險金額之權。受益人故意傷害被保險人未遂時，被保險人得撤銷其受益權利。
+
+* 135 第一百零二條至第一百零四條、第一百十條至第一百十四條、第一百十六條及第一百零七條關於禁止為心神喪失或精神耗弱之人訂立保險契約之規定，於傷害保險準用之。
+
+* 136 保險業之組織，以股份有限公司或合作社為限。非保險業不得兼營保險或類似保險之業務。
+
+* 137 保險業非申請主管機關核准，並依法為營業登記，繳存保證金，領得營業執照後，不得開始營業。
+
+* 138 財產保險業以經營財產保險為限，人身保險業以經營人身保險為限。同一保險業，不得兼營財產保險及人身保險業務。責任保險及傷害保險，得視保險事業發展情況，經主管機關核准獨立經營。保險業不得兼營本法規定以外之業務。保險合作社不得經營非社員之業務。
+
+* 139 各種保險業資本或基金之最低額，由主管機關審酌各地經濟實況，及各種保險業務之需要，分別呈請行政院核定之。
+
+* 140 保險公司得簽訂參加紅利分配之保險契約。保險合作社簽訂之保險契約，以參加分配紅利者為限。依前二項參加紅利分配之保險契約，分配紅利，於年終決算無盈餘時，不得為之。
+
+* 141 保險業於設立時，應按資本或基金實收總額百分之十五，繳存保證金於國庫。
+
+* 142 保證金之繳存應以現金為之。但經主管機關之核准，得以公債或庫券代繳之。前項繳存保證金，非俟宣告停業依法完成清算，不予發還。以有價證券抵繳保證金者，其息票部分，在宣告停業依法清算時，得准移充清算費用。
+
+* 143 保險業營業損失達保證金額時，主管機關得令其以現金或提供其他財產補足之。
+
+* 144 保險業收取保費之計算公式，由主管機關核定之。但健康保險及傷害保險費率中所含之利潤率，應低於其他各種保險。
+
+* 145 保險業於營業年度屆滿時，應分別保險種類，計算其應提存之各種責任準備金，記載於特設之帳簿。前項所稱各種準備金比率，由主管機關定之。
+
+* 146 保險業資金及各種責任準備金之運用，以左列各款為限：一、存放銀行或金庫，但責任準備金以存放主管機關指定之銀行或金庫為限。二、對公債及庫券之投資。三、在證券市場購買生產事業之股票及公司債。四、對不動產之投資，但土地另有法律規定者從其規定。五、以人壽保險單為抵押之放款。六、以擔保確實之有價證券及不動產，為抵押之放款。前項第四款之投資，不得超過資金及責任準備金總額三分之一，但營業用之房屋不在限。第五、六兩款之抵押放款，以經營人壽保險業為限。
+
+* 147 保險業對於每一危險單位之保險金額扣除再保險金額後，不得超過資本金或基金、公積金、特別準備金及未分配盈餘總和之十分之一。
+
+* 148 主管機關得隨時派員檢查保險業之營業及資產、負債，或令保險業於限期內報告營業狀況。
+
+* 149 保險業因查有違背法令，或其資產不足清償債務，並返還責任準備金或保險費時，主管機關得令於一定期間內依法改正。或變更執行業務之方法，並為保護要保人被保險人或受益人之權利，得令其停業或一定期間之停業或解散。保險業因前項之規定而解散時，由主管機關選派清算人。
+
+* 150 保險業解散清算時，應將其營業執照繳銷。
+
+* 151 保險公司除本法另有規定外，適用公司法關於股份有限公司之規定。
+
+* 152 保險公司之股票，不得為無記名式。
+
+* 153 保險公司違反保險法令經營業務，致資產不足清償債務時，其負責決定該項業務之董事長、常務董事、總經理或經理，應負連帶無限清償責任。前項責任，於各該負責人卸職登記之日起滿二年解除。
+
+* 154 外國保險公司在依公司法呈請認許前，應依本法規定向主管機關呈請特許。非經特許，不得在中華民國境內設立分支機構，或委託代理人。
+
+* 155 保險公司之營業登記、外國保險公司之申請特許及其分支機構營業登記及其他登記，其程序，準用公司法公司設立登記、外國公司認許、外國分公司登記及其他登記之規定。
+
+* 156 保險合作社除依本法規定外，適用合作社法及其有關法令之規定。
+
+* 157 保險合作社，除依合作社法籌集股金外，並依本法籌足基金。前項基金非俟公積金積至與基金總額相等時，不得發還。
+
+* 158 保險合作社於社員出社時，其現存財產不足抵償債務，出社之社員仍負擔出社前應負之責任。
+
+* 159 保險合作社之理事，不得兼任其他合作社之理事、監事或無限責任社員。
+
+* 160 保險合作社，除先向主管機關申請為營業登記外，其他登記程序，適用合作社法合作社設立登記之規定。
+
+* 161 保險合作社之社員，對於保險合作社應付之股金及基金，不得以其對保險合作社之債權互相抵銷。
+
+* 162 財產保險合作社之預定社員人數不得少於三百人；人身保險合作社之預定社員人數不得少於五百人。
+
+* 163 保險業之經紀人、代理人、公證人，非向主管機關登記，繳存保證金，領有執業證書，不得執行業務。前項經紀人、代理人、公證人，不得為未經主管機關核准之保險業經營或介紹保險業務。
+
+* 164 保險業代理人、經紀人、公證人，應繳存之保證金，由主管機關訂定，呈請行政院核定之。
+
+* 165 保險業代理人、經紀人、公證人，應有固定業務處所，並專設帳簿記載業務收支。
+
+* 166 未依本法第一百三十七條之規定，經主管機關核准經營保險業務者，應勒令停業，並得科各負責人一千元以下罰鍰。
+
+* 167 非保險業經營保險或類似保險業務者，應勒令停業並得科各負責人一千元以下罰鍰。
+
+* 168 保險業違反本法第一百三十八條之規定，經營未經核定之業務，或其資金及責任准備金之運用，超越本法第一百四十六條規定範圍者，得科各負責人一千元以下罰鍰，或勒令撤銷其負責人，情節重大者，並得撤銷其營業執照。
+
+* 169 保險業違反本法第七十二條之規定超額承保者，除違反部份無效外，得科各負責人一千元以下之罰鍰或勒令撤換其負責人，其情節重大者，並得撤銷其營業執照。
+
+* 170 保險業違反本法強制規定時，除違反部份無效外，得科各負責人一千元以下罰鍰。
+
+* 171 保險業違反本法第一百四十四條、第一百四十五條規定，簽發保單或計提責任準備金者，得科負責人一千元以下罰鍰，並得勒令撤換其核保或精算人員。
+
+* 172 保險業經撤銷登記延不清算者，得科各負責人二千元以下罰鍰。
+
+* 173 主管機關依法所為罰鍰，得依法為強制執行。
+
+* 174 社會保險另以法律定之。
+
+* 175 本法施行細則及保險業管理辦法，由財政部擬訂，呈請行政院核定公布之。
+
+* 176 保險業之設立、登記、轉讓、合併及解散清理，除依公司法規定外，應將詳細程序明訂於管理辦法內。
+
+* 177 代理人、經紀人、公證人管理規則，由財政部另訂之。
+
+* 178 本法自公布日施行。
 
