民事訴訟法 1945.11.30

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -26,7 +26,7 @@
 
 * 14 因關於財產管理有所請求而涉訟者，得由管理地之法院管轄。
 
-* 15 因侵權行為涉訟者，得由行為地之法院管轄。因船舶碰撞或其他海上事故請求損害賠償而涉訟者，得由受損害之船舶最初到達地，或加害船舶被扣留地之法院管轄。
+* 15 因侵權行為涉訟者，得由行為地之法院管轄。因船舶碰撞或其他海上事故，請求損害賠償而涉訟者，得由受損害之船舶最初到達地，或加害船舶被扣留地，或其船籍港之法院管轄。因航空器飛航失事或其他空中事故，請求損害賠償而涉訟者，得由受損害航空器最初降落地，或加害航空器被扣留地之法院管轄。
 
 * 16 因海難救助涉訟者，得由救助地或被救助之船舶最初到達地之法院管轄。
 
@@ -42,7 +42,7 @@
 
 * 22 同一訴訟，數法院有管轄權者，原告得任向其中一法院起訴。
 
-* 23 有左列各款情形之一者，直接上級法院應依當事人之聲請，指定管轄。一、有管轄權之法院，因法律或事實，不能行審判權者。二、因管轄區域境界不明，致不能辨別有管轄權之法院者。前項聲請，得向受訴法院或直接上級法院為之。指定管轄之裁定，不得聲明不服。
+* 23 有左列各款情形之一者，直接上級法院應依當事人之聲請或受訴法院之請求，指定管轄。一、有管轄權之法院，因法律或事實，不能行審判權者。二、因管轄區域境界不明，致不能辨別有管轄權之法院者。前項聲請，得向受訴法院或直接上級法院為之。指定管轄之裁定，不得聲明不服。
 
 * 24 當事人得以合意，定第一審管轄法院。但以關於由一定法律關係而生之訴訟為限。前項合意，應以文書證之。
 
@@ -52,7 +52,7 @@
 
 * 27 定法院之管轄，以起訴時為準。
 
-* 28 訴訟之全部或一部，法院認為無管轄權者，應依原告聲請以裁定移送於其管轄法院。如有數管轄法院時，移送於原告所指定之管轄法院。前項情形，原告未聲請移送或指定管轄法院者，應於裁判前訊問之。移送訴訟之聲請被駁回者，不得聲明不服。
+* 28 訴訟之全部或一部，法院認為無管轄權者，依原告聲請或依職權，以裁定移送於其管轄法院。移送訴訟之聲請被駁回者，不得聲明不服。
 
 * 29 移送訴訟前如有急迫情形，應依原告聲請，為必要之處分。
 
@@ -70,9 +70,9 @@
 
 * 36 聲請推事迴避經裁定駁回者，得於五日內抗告。其以聲請為正當者，不得聲請不服。
 
-* 37 推事被聲請迴避者，在該聲請事件終結前，應停止訴訟程序。但其聲請違背第三十三條第二項或第三十四條第一項或第二項之規定，或顯係意圖延滯訴訟而為者，不在此限。依前項規定停止訴訟程序中，如有急迫情形，仍應為必要之處分。
+* 37 推事被聲請迴避者，除因有急迫情形，應為必要處分，或以第三十三條第一項第二款為理由者外，應即停止訴訟程序。
 
-* 38 第三十五條第一項所定為裁定之法院或院長，如認推事有應自行迴避之原因者，應依職權為迴避之裁定。
+* 38 第三十五條第一項所定為裁定之法院或院長，如認推事有應自行迴避之原因者，應依職權為迴避之裁定。推事有第三十三條第一項第二款之情形者，經院長許可，得迴避之。
 
 * 39 本節之規定，於法院書記官及通譯準用之。
 
@@ -98,11 +98,11 @@
 
 * 50 前二條規定，於第四十一條之被選定人為訴訟行為者，準用之。
 
-* 51 對於無訴訟能力人為訴訟行為，因其無法定代理人，或其法定代理人不能行代理權，恐致久延而受損害者，得聲請受訴法院之審判長，選任特別代理人。選任特別代理人之裁定，並應送達於特別代理人。特別代理人於法定代理人或本人承當訴訟以前，代理當事人為一切訴訟行為。但不得為捨棄、認諾或和解。選任特別代理人所需費用，及特別代理人代為訴訟所需費用，得命聲請人墊付。
+* 51 對於無訴訟能力人為訴訟行為，因其無法定代理人，或其法定代理人不能行代理權，恐致久延而受損害者，得聲請受訴法院之審判長，選任特別代理人。無訴訟能力人有為訴訟之必要，而無法定代理人，或法定代理人不能行代理權者，其親屬或利害關係人，得聲請受訴法院之審判長，選任特別代理人。選任特別代理人之裁定，並應送達於特別代理人。特別代理人於法定代理人或本人承當訴訟以前，代理當事人為一切訴訟行為。但不得為捨棄、認諾或和解。選任特別代理人所需費用，及特別代理人代為訴訟所需費用，得命聲請人墊付。
 
 * 52 本法關於法定代理之規定，於第四十條第三項之代表人或管理人，及依法令得為訴訟上行為之代理人準用之。
 
-* 53 二人以上於左列各款情形，得為共同訴訟人，一同起訴或一同被訴：一、為訴訟標的之權利或義務，為其所共同者。二、為訴訟標的之權利或義務，本於同一之事實上及法律上原因者。三、為訴訟標的之權利或義務，係同種類，而本於事實上及法律上同種類之原因者。但以被告之住所在同一法院管轄區域內者為限。
+* 53 二人以上於左列各款情形，得為共同訴訟人，一同起訴或一同被訴：一、為訴訟標的之權利或義務，為其所共同者。二、為訴訟標的之權利或義務，本於同一之事實上及法律上原因者。三、為訴訟標的之權利或義務，係同種類，而本於事實上及法律上同種類之原因者。但以被告之住所在同一法院管轄區域內，或有第四條至第十九條所定之共同管轄法院者為限。
 
 * 54 就他人間之訴訟標的全部或一部，為自己有所請求或主張，因其訴訟之結果，自已之權利將被侵害者，得於本訴訟繫屬中，以其當事人兩造為共同被告，向該第一審法院起訴。前項情形，如本訴訟繫屬於第二審法院者，亦得於其言詞辯論終結前，向該第二審法院起訴。
 
@@ -124,7 +124,7 @@
 
 * 63 參加人對於其所輔助之當事人，不得主張本訴訟之裁判不當。但參加人因參加時訴訟之程度，或因該當事人之行為不能用攻擊或防禦方法，或當事人因故意或重大過失不用參加人所不知之攻擊或防禦方法者，不在此限。
 
-* 64 參加人經兩造同意時，得代其所輔助之當事人承當訴訟。參加人承當訴訟者，法院依其所輔助當事人之聲明，應以裁定許該當事人脫離訴訟。但本案之判決，對於脫離之當事人，仍有效力。
+* 64 參加人經兩造同意時，得代其所輔助之當事人，承當訴訟。參加人承當訴訟者，其所輔助之當事人，脫離訴訟。但本案之判決，對於脫離之當事人，仍有效力。
 
 * 65 當事人得於訴訟繫屬中，將訴訟告知於因自已敗訴而有法律上利害關係之第三人。受訴訟之告知者，得遞行告知。
 
@@ -136,7 +136,7 @@
 
 * 69 訴訟代理人，應於最初為訴訟行為時，提出委任書。但由當事人以言詞委任，經法院書記官記明筆錄者，不在此限。
 
-* 70 訴訟代理人就其受委任之事件，有為一切訴訟行為之權，但捨棄、認諾、撤回、和解、提起上訴或再審之訴，及關於強制執行之行為，或領取所爭物，非受特別委任，不得為之。
+* 70 訴訟代理人就其受委任之事件，有為一切訴訟行為之權，但捨棄、認諾、撤回、和解、提起上訴，或再審之訴及關於強制執行之行為，或領取所爭物，或選任代理人，非受特別委任，不得為之。
 
 * 71 訴訟代理人有二人以上者，均得單獨代理當事人。違反前項之規定而為委任者，對於他造不生效力。
 
@@ -184,7 +184,7 @@
 
 * 93 當事人分擔訴訟費用者，法院為確定費用額之裁判時，除前條第二項情形外，應視為各當事人應負擔之費用，已就相等之額抵銷，而確定其一造應賠償他造之差額。
 
-* 94 法院得命書記官計算訴訟費用額。
+* 94 法院得命書記官計算訴訟費用額。訴訟行為須支出費用者，得命當事人預納之。
 
 * 95 本節之規定，於法院以裁定終結本案或與本案無涉之爭點者，準用之。
 
@@ -214,9 +214,9 @@
 
 * 108 對於外國人准予訴訟救助，以依條約或該外國人之本國法，中華民國人在其國得受訴訟救助者為限。
 
-* 109 聲請訴訟救助，應向受訴法院為之。請求救助之事由，應釋明之。
+* 109 聲請訴訟救助，應向受訴法院為之。請求救助之事由，應釋明之。前項釋明，得由受訴法院管轄區域內有資力之人，出具保證書代之。
 
-* 110 准予訴訟救助，有左列各款之效力：一、暫免審判費用。二、免供訴訟費用之擔保。三、暫行免付執達員之規費及墊款。四、法院得為受救助人選任律師代理訴訟，暫行免付酬金。
+* 110 准予訴訟救助，有左列各款之效力：一、暫免審判費用。二、免供訴訟費用之擔保。三、暫行免付執達員應收之費用及墊款。四、法院得為受救助人，選任律師代理訴訟，暫行免付酬金。
 
 * 111 准予訴訟救助，於假扣押、假處分、上訴及抗告，亦有效力。
 
@@ -224,7 +224,7 @@
 
 * 113 當事人力能支出訴訟費用而受訴訟救助，或其後力能支出者，法院應以裁定撤銷救助，並命其補交暫免之費用。前項裁定，在訴訟未結前，由訴訟繫屬之法院；在訴訟已結後，由第一審受訴法院為之。
 
-* 114 因訴訟救助暫免之審判費用，得向負擔訴訟費用之他造徵收之。執達員或為受救助人選任之律師，得對於負擔訴訟費用之他造，請求歸還規費、酬金及墊款。依前項規定為請求者，得據受救助人有執行力之債務名義，聲請確定費用額及強制執行，並得為第九十條之聲請。
+* 114 因訴訟救助暫免之審判費用，得向負擔訴訟費用之他造徵收之。執達員或為受救助人選任之律師，得對於負擔訴訟費用之他造，請求歸還其應收之費用、墊款及酬金。依前項規定為請求者，得據受救助人有執行力之債務名義，聲請確定費用額及強制執行，並得為第九十條之聲請。
 
 * 115 本節所定之各裁定，得於五日內抗告。
 
@@ -272,7 +272,7 @@
 
 * 137 送達於住、居所、事務所或營業所不獲會晤應受送達人者，得將文書付與有辨別事理能力之同居人或受僱人。如同居人或受僱人為他造當事人者，不適用前項之規定。
 
-* 138 送達不能依前二條規定為之者，得將文書寄存送達地之公安局或鄰長處，並作送達通知書，黏貼於應受送達人住、居所、事務所或營業所門首，以為送達。
+* 138 送達不能依前二條規定為之者，得將文書寄存送達地之自治或警察機關，並作送達通知書，黏貼於應受送達人住、居所、事務所或營業所門首，以為送達。
 
 * 139 應受送達人拒絕收領而無法律上理由者，應將文書置於送達處所，以為送達。
 
@@ -294,7 +294,7 @@
 
 * 148 受囑託之官署或公務員，經通知已為送達或不能為送達者，法院書記官應將通知書附卷；其不能為送達者，並應將其事由通知使為送達之當事人。
 
-* 149 對於當事人之送達，有左列各款情形之一者，受訴法院得依聲請，准為公示送達：一、應為送達之處所不明者。二、於有治外法權人之住、居所或事務所為送達而無效者。三、於外國為送達，不能依第一百四十五條之規定辦理，或預知雖依該條規定辦理而無效者。駁回前項聲請之裁定，得為抗告。
+* 149 對於當事人之送達，有左列各款情形之一者，受訴法院得依聲請，准為公示送達：一、應為送達之處所不明者。二、於有治外法權人之住、居所或事務所為送達，而無效者。三、於外國為送達，不能依第一百四十五條之規定辦理，或預知雖依該條規定辦理，而無效者。駁回前項聲請之裁定，得為抗告。原告或曾受送達之被告變更應為送達之處所，不向受訴法院陳明，致有第一項第一款情形者，受訴法院得依職權，命為公示送達。
 
 * 150 依前條規定為公示送達後，對於同一當事人之公示送達，得依職權為之。
 
@@ -328,7 +328,7 @@
 
 * 165 因遲誤上訴或抗告期間而聲請回復原狀者，應以書狀向為裁判之原法院為之；遲誤其他期間者，向管轄該期間內應為之訴訟行為之法院為之。遲誤期間之原因及其消滅時期，應於書狀內表明並釋明之。聲請回復原狀，應同時補行期間內應為之訴訟行為。
 
-* 166 回復原狀之聲請，由受聲請之法院與補行之訴訟行為合併裁判之。但原法院認其聲請應行許可，而將該上訴或抗告事件送交上級法院者，應添具意見書，送由上級法院合併裁判。
+* 166 回復原狀之聲請，由受聲請之法院與補行之訴訟行為合併裁判之。但原法院認其聲請應行許可，而將該上訴或抗告事件送交上級法院者，應送由上級法院合併裁判。
 
 * 167 受命推事或受託推事關於其所為之行為，得定期日及期間。第一百五十四條至第一百六十條及第一百六十三條之規定，於受命推事或受託推事定期日及期間者準用之。
 
@@ -368,7 +368,7 @@
 
 * 185 依第六十五條之規定，告知訴訟，法院如認受告知人能為參加者，得命其在參加以前，中止訴訟程序。
 
-* 186 中止訴訟程序之裁定，法院得撤銷之。
+* 186 中止訴訟程序之裁定，法院得依聲請或依職權撤銷之。
 
 * 187 關於中止訴訟程及關於撤銷中止之裁定，得為抗告。
 
@@ -376,7 +376,7 @@
 
 * 189 當事人得以合意休止訴訟程序。但不變期間之進行，不因休止而受影響。前項合意，應由兩造向受訴法院陳明。
 
-* 190 休止訴訟程序之當事人，自陳明休止時起，一個月內不得續行訴訟。當事人自呈明休止時起，如於四個月內不續行訴訟者，視為撤回其訴或上訴。
+* 190 休止訴訟程序之當事人，自陳明休止時起，如於四個月內，不續行訴訟者，視為撤回其訴或上訴。前項規定之效力，法院應於其效力發生前十日，通知當事人。
 
 * 191 當事人兩造遲誤言詞辯論期日者，除別有規定外，視為休止訴訟程序。但法院於認為必要時，得依職權續行訴訟。
 
@@ -462,7 +462,7 @@
 
 * 232 判決如有誤寫、誤算或其他類此之顯然錯誤者，法院得隨時以裁定更正之；其正本與原本不符者亦同。前項裁定，附記於判決原本及正本；如正本已經送達，不能附記者，應製作該裁定之正本送達。駁回更正聲請之裁定，不得抗告。
 
-* 233 訴訟標的之一部或訴訟費用，裁判有脫漏者，法院應依聲請以判決補充之。聲請補充判決，應於判決送達後十日內為之。脫漏之部分，已經辯論終結者，應即為判決；未終結者，審判長應速定言詞辯論期日。駁回補充判決之聲請，以裁定為之。
+* 233 訴訟標的之一部或訴訟費用，裁判有脫漏者，法院應依聲請，以判決補充之。聲請補充判決，應於判決送達後，二十日之不變期間內為之；當事人就脫漏部分聲明不服者，以聲請補充判決論。脫漏之部分已經辯論終結者，應即為判決；未終結者，審判長應速定言詞辯論期日。駁回補充判決之聲請，以裁定為之。
 
 * 234 裁定得不經言詞辯論為之。裁定前不行言詞辯論者，除別有規定外，得命關係人以書狀或言詞為陳述。
 
@@ -492,9 +492,9 @@
 
 * 247 確認法律關係成立或不成立之訴，非原告有即受確認判決之法律上利益者，不得提起之；確認證書真偽之訴亦同。
 
-* 248 對於同一被告之數宗訴訟，屬於同一法院管轄，並得行同種之訴訟程序者，得合併提起之。
+* 248 對於同一被告之數宗訴訟，除定有專屬管轄者外，得向就其中一訴訟有管轄權之法院，合併提起之。但不得行同種訴訟程序者，不在此限。
 
-* 249 原告之訴，有左列各款情形之一者，法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件，不屬普通法院之權限者。二、訴訟事件，不屬受訴法院管轄，而不能為第二十八條之裁定者。三、原告或被告無當事人能力者。四、原告或被告無訴訟能力，未由法定代理人合法代理者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴不合程式或不備其他要件者。七、起訴違背第二百五十三條、第二百六十三條第二項、第三百八十條或第三百九十九條之規定者。
+* 249 原告之訴，有左列各款情形之一者，法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬普通法院之權限者。二、訴訟事件不屬受訴訟法院管轄而不能為第二十八條之裁定者。三、原告或被告無當事人能力者。四、原告或被告無訴訟能力，未由法定代理人合法代理者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴不合程式或不備其他要件者。七、起訴違背第二百五十三條、第二百六十三條第二項之規定，或其訴訟標的為確定判決之效力所及者。原告之訴，依其所訴之事實，在法律上顯無理由者，法院得不經言詞辯論，逕以判決駁回之。
 
 * 250 原告之訴，除應依前條之規定逕行駁回，或依第二十八條之規定移送他法院者外，審判長應速定言詞辯論期日。
 
@@ -510,7 +510,7 @@
 
 * 256 前條規定，於左列各款行為無礙：一、不變更訴訟標的，而補充或更正事實上或法律上之陳述。二、擴張或減縮應受判決事項之聲明。三、因情事變更而以他項聲明代最初之聲明。四、該訴訟標的對於數人必須合一確定者，追加其原非當事人之人為當事人。五、訴訟進行中，於某法律關係之成立與否有爭執，而其裁判應以該法律關係為據者，並求對於被告確定其法律關係之判決。
 
-* 257 訴之變更或追加，如新訴於受訴法院無管轄權，不得為之。但前條第五款之訴，不專屬他法院管轄者，不在此限。追加新訴，非新訴與原訴，得行同種之訴訟程序者，不得為之。
+* 257 訴之變更或追加，如新訴專屬他法院管轄，或不得行同種之訴訟程序者，不得為之。
 
 * 258 法院因不甚礙被告之防禦及訴訟之終結，而許訴之變更或追加，或以訴為非變更或無追加之裁判，不得聲明不服。
 
@@ -526,7 +526,7 @@
 
 * 264 本訴撤回後，反訴之撤回，不須得原告之同意。
 
-* 265 各當事人因準備言詞辯論，應以書狀記載其所用之攻擊或防禦方法，及對於他造之聲明並攻擊或防禦方法之陳述，提出於法院，由法院送達於他造。
+* 265 各當事人因準備言詞辯論之必要，應以書狀記載其所用之攻擊或防禦方法，及對於他造之聲明並攻擊或防禦方法之陳述，提出於法院，由法院送達於他造。
 
 * 266 原告準備言詞辯論之書狀，依第二百四十四條第三項之規定。被告因準備言詞辯論，宜於未逾就審期間二分之一以前，提出答辯狀。
 
@@ -542,7 +542,7 @@
 
 * 272 第一百九十八條至第二百條、第二百零三條、第二百零七條、第二百零八條、第二百十三條第二項、第二百十四條、第二百十七條及第二百六十八條關於法院或審判長權限之規定，於受命推事行準備程序時準用之。
 
-* 273 當事人之一造，於準備程序之期日不到場者，應對於到場之一造，行準備程序，將筆錄送達於未到場人，並定新期日傳喚兩造。未到場之當事人，於新期日仍不到場者，受命推事得終結準備程序。
+* 273 當事人之一造，於準備程序之期日不到場者，應對於到場之一造，行準備程序，將筆錄送達於未到場人。前項情形，除有另定新期日之必要者外，受命推事得終結準備程序。
 
 * 274 法院得命再開已終結之準備程序。
 
@@ -756,7 +756,7 @@
 
 * 379 於言詞辯論時，試行和解而成立者，應記載於言詞辯論筆錄。由受命推事或受託推事試行和解而成立者，應作和解筆錄。第二百十二條至第二百十九條之規定，於前項筆錄準用之。第一項及第二項筆錄，應送達於當事人。
 
-* 380 和解成立者，當事人不得就該法律關係，更行起訴。
+* 380 和解成立者，與確定判決，有同一之效力。和解有無效或得撤銷之原因者，當事人得請求繼續審判。第四百九十六條及第四百九十八條之規定，於前項情形準用之。
 
 * 381 訴訟達於可為裁判之程度者，法院應為終局判決。命合併辯論之數宗訴訟，其一達於可為裁判之程度者，應先為終局判決。但應適用第二百零五條第三項之規定者，不在此限。
 
@@ -766,7 +766,7 @@
 
 * 384 當事人於言詞辯論時，為訴訟標的之捨棄或認諾者，應本於其捨棄或認諾為該當事人敗訴之判決。
 
-* 385 言詞辯論期日，當事人之一造不到場者，得依到場當事人之聲請，由其一造辯論而為判決。如以前已為辯論，或證據調查或未到場人有準備書狀之陳述者，為前項判決時，應斟酌之；未到場人以前聲明之證據，其必要者，並應調查之。
+* 385 言詞辯論期日，當事人之一造不到場者，得依到場當事人之聲請，由其一造辯論而為判決；不到場之當事人，經再傳而仍不到場者，並得依職權，由一造辯論而為判決。如以前已為辯論或證據調查，或未到場人有準備書狀之陳述者，為前項判決時，應斟酌之；未到場人以前聲明之證據，其必要者，並應調查之。
 
 * 386 有左列各款情形之一者，法院應以裁定駁回前條聲請，並延展辯論期日：一、不到場之當事人未於相當時期受合法之傳喚者。二、當事人之不到場，可認為係因天災或其他不可避之事故者。三、到場之當事人於法院應依職權調查之事項，不能為必要之證明者。四、到場之當事人所提出之聲明、事實或證據，未於相當時期通知他造者。
 
@@ -774,7 +774,7 @@
 
 * 388 除別有規定外，法院不得就當事人未聲明之事項為判決。
 
-* 389 左列各款之判決，法院應依職權宣告假執行：一、本於被告認諾所為之判決。二、命履行扶養義務之判決。但以起訴前最近六個月分及訴訟中履行期已到者為限。三、就第四百零二條第二項訴訟所為，被告敗訴之判決。四、命清償票據上債務之判決。五、所命給付之金額或價額，未逾一百圓之判決。計算前項第五款價額，準用第四百零四條至第四百零七條之規定。
+* 389 左列各款之判決，法院應依職權，宣告假執行：一、本於被告認諾所為之判決。二、命履行扶養義務之判決。但以起訴前最近六個月分，及訴訟中履行期已到者為限。三、就第四百零二條第二項訴訟所為被告敗訴之判決。四、命清償票據上債務之判決。五、所命給付之金額或價額，未逾五百元之判決。計算前項第五款價額，準用第四百零四條至第四百零七條之規定。
 
 * 390 關於財產權之訴訟，原告釋明在判決確定前不為執行，恐受難於抵償或難於計算之損害者，法院應依其聲請，宣告假執行。原告陳明在執行前可供擔保而聲請宣告假執行者，雖無前項釋明，法院應定相當之擔保額，宣告供擔保後，得為假執行。
 
@@ -786,7 +786,7 @@
 
 * 394 法院應依職權宣告假執行，而未為宣告或忽視假執行之聲請者，準用第二百三十三條之規定。
 
-* 395 假執行之宣告，因就本案判決或該宣告有廢棄或變更之判決，自該判決宣示時起，於其廢棄或變更之範圍內，失其效力。法院廢棄或變更宣告假執行之本案判決者，應依被告之聲明，將其因假執行或因免假執行所為給付及所受損害，於判決內命原告返還及賠償。僅廢棄或變更假執行之宣告者，前項規定，於其後廢棄或變更本案判決之判決適用之。
+* 395 假執行之宣告，因就本案判決或該宣告有廢棄或變更之判決，自該判決宣示時起，於其廢棄或變更之範圍內，失其效力。法院廢棄或變更宣告假執行之本案判決者，應依被告之聲明，將其因假執行或因免假執行所為給付及所受損害，於判決內，命原告返還及賠償，被告未聲明者，應告以得為聲明。僅廢棄或變更假執行之宣告者，前項規定，於其後廢棄或變更本案判決之判決適用之。
 
 * 396 判決所命之給付，其性質非長期間不能履行或經原告同意者，法院得於判決內定相當之履行期間。經原告同意者，法院得定分次履行之期間。但被告遲誤一次履行者，其後之期間，視為亦已到期。履行期間，自判決確定或宣告假執行之判決送達於被告時起算。
 
@@ -800,7 +800,7 @@
 
 * 401 外國法院之確定判決，有左列各款情形之一者，不認其效力：一、依中華民國之法律，外國法院無管轄權者。二、敗訴之一造，為中華民國人而未應訴者。但開始訴訟所需之傳喚或命令，已在該國送達本人，或依中華民國法律上之協助送達者，不在此限。三、外國法院之判決，有背公共秩序或善良風俗者。四、無國際相互之承認者。
 
-* 402 關於財產權之訴訟，其標的之金額或價額在八百圓以下者，適用本章所定之簡易程序。左列各款訴訟，不問其標的之金額或價額，一律適用簡易程序。一、出租人與承租人間，因接收房屋，或遷讓、使用、修繕，或因留置承租人之傢具、物品涉訟者。二、僱用人與受僱人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿、運送費或因寄存行李、財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線，或設置界標涉訟者。不合於前二項規定之訴訟，得以當事人之合意，適用簡易程序。
+* 402 關於財產權之訴訟，其標的之金額或價額在二千元以下者，適用本章所定之簡易程序。左列各款訴訟，不問其標的之金額或價額，一律適用簡易程序。一、出租人與承租人間，因接收房屋或遷讓使用修繕，或因留置承租人之傢具物品涉訟者。二、僱用人與受僱人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿運送費或因寄存行李財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線或設置界標涉訟者。不合於前二項規定之訴訟，得以當事人之合意，適用簡易程序。
 
 * 403 計算訴訟標的之價額，依第四百零四條至第四百零七條之規定。
 
@@ -862,7 +862,7 @@
 
 * 432 判決書內之事實及理由，得僅記載要領。
 
-* 433 第四百零二條第一項之訴，因訴之變更致訴訟標的之金額或價額逾八百圓者，除經當事人合意外，其辯論及裁判不得依簡易程序之規定；追加之新訴或反訴，其訴訟標的之金額或價額逾八百圓，而以原訴與之合併辯論及裁判者亦同。
+* 433 第四百零二條第一項之訴，因訴之變更，致訴訟標的之金額或價額逾二千元者，除經當事人合意外，其辯論及裁判不得依簡易程序之規定；追加之新訴或反訴，其訴訟標的之金額或價額逾二千元，而以原訴與之合併辯論及裁判者亦同。
 
 * 434 對於第一審之終局判決，得上訴於管轄第二審之法院。
 
@@ -876,13 +876,13 @@
 
 * 439 提起上訴，如逾上訴期間，或係對於不得上訴之判決而上訴者，原第一審法院應以裁定駁回之。上訴有其他顯不合法之情形而可以補正者，原第一審法院應定期間命其補正；如不於期間內補正，可認為係意圖延滯訴訟者，應依他造聲請，以裁定就原判決宣告假執行，並得酌量情形依職權宣告之。
 
-* 440 上訴未經依前條第一項之規定駁回者，第一審法院書記官應速將上訴狀送達被上訴人。各當事人均提起上訴，或其他各當事人之上訴期間已滿後，第一審法院書記官應速將訴訟卷宗，連同上訴狀及被上訴人提出之書狀，並前條第二項命補正及宣告假執行之裁定，送交第二審法院。前項應送交之卷宗，如為第一審法院所需用者，應自備繕本或節本。
+* 440 上訴未經依前條第一項之規定駁回者，第一審法院書記官應速將上訴狀，送達被上訴人。各當事人均提起上訴，或其他各當事人之上訴期間已滿後，第一審法院書記官應速將訴訟卷宗，連同上訴狀及其他有關文件，送交第二審法院。前項應送交之卷宗，如為第一審法院所需用者，應自備繕本或節本。
 
 * 441 上訴不合程式或已逾期間或法律上不應准許者，第二審法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正。上訴不合法之情形，已經原第一審法院命其補正而未補正者，得不行前項但書之程序。
 
 * 442 言詞辯論，應於上訴聲明之範圍內為之。當事人應陳述第一審言詞辯論之結果。但審判長得令庭員或書記官朗讀第一審判決筆錄，或其他卷內文書代之。
 
-* 443 訴之變更、追加或提起反訴，非經他造同意，不得為之。但第二百五十六條第二款及第三款情形，不在此限。第二百五十五條第二項之規定，於提起反訴準用之。
+* 443 訴之變更、追加或提起反訴，非經他造同意，不得為之。但第二百五十六條第二款至第四款情形，不在此限。第二百五十五條第二項之規定，於提起反訴準用之。
 
 * 444 當事人得提出新攻擊或防禦方法。在第一審就事實或證據所未為之陳述，得追復之。
 
@@ -898,13 +898,13 @@
 
 * 450 第四百四十八條第一項及前條第二項之判決，得不經言詞辯論為之。
 
-* 451 判決書內應記載之事實，得引用第一審判決。
+* 451 判決書內應記載之事實，以當事人未提出新攻擊或防禦方法者為限，得引用第一審判決。
 
 * 452 第二審法院應依聲請，就關於假執行之上訴，先為辯論及裁判。
 
 * 453 第一審判決未宣告假執行或宣告附條件之假執行者，其未經聲明不服之部分，第二審法院應依當事人在言詞辯論時之聲請，以裁定宣告假執行。第二審法院認為上訴人係意圖延滯訴訟而提起上訴者，應依被上訴人聲請，以裁定就第一審判決宣告假執行；其逾時始行提出攻擊或防禦方法，可認為係意圖延滯訴訟者亦同。
 
-* 454 關於財產權之訴訟，第二審法院之判決，維持第一審判決者，應於其範圍內，依聲請宣告假執行。
+* 454 關於財產權之訴訟，第二審法院之判決，維持第一審判決者，應於其範圍內，依聲請宣告假執行。前項宣告假執行，如有必要，亦得以職權為之。
 
 * 455 第二審法院關於假執行之裁判，不得聲明不服。
 
@@ -942,7 +942,7 @@
 
 * 472 第三審法院，應於上訴聲明之範圍內調查之。第三審法院調查第二審判決有無違背法令，不受上訴理由之拘束。
 
-* 473 第三審法院，應以第二審判決確定之事實為判決基礎。以違背訴訟程序之規定為上訴理由時，所舉違背之事實及以違背法令確定事實為上訴理由時，所舉之該事實，第三審法院得斟酌之。
+* 473 第三審法院，應以第二審判決確定之事實為判決基礎。以違背訴訟程序之規定為上訴理由時，所舉違背之事實，及以違背法令確定事實、遺漏事實或認作主張事實為上訴理由時，所舉之該事實，第三審法院得斟酌之。
 
 * 474 第三審法院認上訴為有理由者，就該部分應廢棄原判決。因違背訴訟程序之規定，廢棄原判決者，其違背之訴訟程序部分，視為亦經廢棄。
 
@@ -970,7 +970,7 @@
 
 * 486 抗告，得提出新事實及證據。
 
-* 487 原法院或審判長認抗告為有理由者，應更正原裁定。但以不受該裁定之羈束，或該裁定係於訴訟程序進行中所為者為限。提起抗告已逾抗告期間，或係對於不得抗告之裁定而抗告者，原法院或審判長應駁回之。原法院或審判長不為前二項裁定者，應添具意見書，速將抗告事件送交抗告法院；如認為必要時，並應送交訴訟卷宗。前項應送交之卷宗，如為原法院所需用者，應自備繕本或節本。
+* 487 原法院或審判長認抗告為有理由者，應更正原裁定。提起抗告已逾抗告期間，或係對於不得抗告之裁定而抗告者，原法院或審判長應駁回之。原法院或審判長不為前二項裁定者，應速將抗告事件送交抗告法院；如認為必要時，應送交訴訟卷宗，並得添具意見書。前項應送交之卷宗，如為原法院所需用者，應自備繕本或節本。
 
 * 488 抗告，除別有規定外，無停止執行之效力。原法院或審判長得在抗告法院裁定前，停止原裁定之執行。抗告法院得在裁定前，停止原裁定之執行，或為其他必要處分。前二項裁定，不得抗告。
 
@@ -1066,7 +1066,7 @@
 
 * 534 關於假處分之規定，於爭執之法律關係有定暫時狀態之必要者準用之。
 
-* 535 申報權利之公示催告，以法律有規定者為限。公示催告，對於不申報權利人，生失權之效果。
+* 535 申報權利之公示催告，以得依背書轉讓之證券及其他法律有規定者為限。公示催告，對於不申報權利人，生失權之效果。
 
 * 536 法院應就公示催告之聲請為裁定。法院准許聲請者，應為公示催告。
 
@@ -1222,7 +1222,7 @@
 
 * 612 撤銷禁治產宣告之訴，法院認為有理由者，應以判決撤銷宣告禁治產之裁定。前項情形，法院於判決確定前，因保護禁治產人之身體或財產，得命為必要之處分。第六百零二條第二項及第三項之規定，於前項處分準用之。
 
-* 613 在撤銷禁治產宣告前，監護人所為之行為，不失其效力。在撤銷禁治產宣告前，禁治產人所為之行為，不得本於宣告禁治產之裁定，而撤銷之。
+* 613 在撤銷禁治產宣告前，監護人所為之行為，不失其效力。在撤銷禁治產宣告前，禁治產人所為之行為，不得本於宣告禁治產之裁定，而主張無效。
 
 * 614 撤銷禁治產宣告之判決確定後，應由第一審受訴法院布告之。
 
